--- a/01_선거 개괄.md
+++ b/01_선거 개괄.md
@@ -149,7 +149,7 @@ Chapter 4, 5에서는 각 시·도별 선거구도와 주목할 선거구를 살
 
 <!--
 ### 지금까지 선출제도에 대한 불만
-2016년 총선과 박근혜 대통령 탄핵을 거치면서, 한국 국회는 가장 규모가 큰 2개 정당(더불어민주당, 자유한국당) 외에도 어느 정도 규모를 갖춘 정당. 특히나 국회에서 3, 5, 6, 7번째로 규모가 큰 정당인 바른미래당, 대안신당, 정의당, 민주평화당은 
+2016년 총선과 박근혜 대통령 탄핵을 거치면서, 한국 국회는 가장 규모가 큰 2개 정당(더불어민주당, 미래한국당) 외에도 어느 정도 규모를 갖춘 정당. 특히나 국회에서 3, 5, 6, 7번째로 규모가 큰 정당인 바른미래당, 대안신당, 정의당, 민주평화당은 
 -->
 
 ### 개정(1): “병립형” 비례대표제에서 “절반 연동형” 비례대표제로
@@ -331,7 +331,7 @@ Chapter 4, 5에서는 각 시·도별 선거구도와 주목할 선거구를 살
 
 2018년에 당선되었으나 당선무효가 된 황천모 전 시장은 나름 이변의 주인공이었다. 그는 선거 직전까지 자유한국당 수석부대변인 등 서울의 중앙당 활동이 많았고, 상주에서의 활동이 뚜렷하지는 않았다. 자유한국당에서 공천경쟁을 벌인 상대로는, 4선에 도전하는 현직 시장, 현직 시장을 2010년에 이기고 당선되었던 전직 시장, 전직 국군기무사령관이자 재선의 (그러나 배우자의 공직선거법 위반으로 당선무효가 되었던) 전직 상주시 국회의원이 있었다. 자유한국당이 이들 상대후보를 모두 공천 배제하고 경선을 치러서 황천모를 자유한국당 후보로 공천했다. 경선에서 배제된 상대후보 3인이 모두 무소속으로 본선에 출마했고, 여기에 더불어민주당 후보까지 합하여 5강 구도의 선거가 벌어졌다. 최다득표로 당선된 황천모의 득표율은 불과 25.65%였다. 
 
-2년 전에 출마하여 아깝게 패한 후보들이 그대로 남아있으니, 2년 전의 그 사단이 이번 자유한국당 공천 경쟁에서 또 한번 재현될 가능성이 매우 크다. 그나마 재선거가 총선과 함께 치러져서, 후보 몇몇은 아예 총선 출마로 방향을 바꿀 수도 있겠다. 상주시의 국회의원 지역구는 2016년부터 군위군·의성군·청송군 지역구와 통합되었는데, 현직 국회의원인 김재원은 군위군·의성군·청송군에서 당선되었던 인물이라서 지역기반이 다르기 때문이다. 2016년 총선의 새누리당 후보경선에서, 김재원은 당시 상주시 국회의원이던 김종태와 맞붙어 패배한 바 있다. (그리고 그 김종태가, 2018년 상주시장에 무소속 출마했던 그 전직 재선 국회의원이다.)
+2년 전에 출마하여 아깝게 패한 후보들이 그대로 남아있으니, 2년 전의 그 사단이 이번 미래통합당 공천 경쟁에서 또 한번 재현될 가능성이 매우 크다. 그나마 재선거가 총선과 함께 치러져서, 후보 몇몇은 아예 총선 출마로 방향을 바꿀 수도 있겠다. 상주시의 국회의원 지역구는 2016년부터 군위군·의성군·청송군 지역구와 통합되었는데, 현직 국회의원인 김재원은 군위군·의성군·청송군에서 당선되었던 인물이라서 지역기반이 다르기 때문이다. 2016년 총선의 새누리당 후보경선에서, 김재원은 당시 상주시 국회의원이던 김종태와 맞붙어 패배한 바 있다. (그리고 그 김종태가, 2018년 상주시장에 무소속 출마했던 그 전직 재선 국회의원이다.)
 
 ### 시·도의회 의원
 대구광역시의회
