--- a/02_정당과 역사.md
+++ b/02_정당과 역사.md
@@ -27,15 +27,17 @@
 
 ## 민주당계 정당 
 ### 더불어민주당 - 민주당게 주류정당
-### 바른미래당 - 민주당계 제3정당
+### 민생당 - 민주당계 전라권 제3정당
+### 열린민주당 - 민주당계 비례정당
 
 ## 보수주류 정당
-### 자유한국당(통합신당) - 보수주류 정당
-### 미래한국당 - 반헌법 보수주류 정당
+### 미래통합당 - 보수주류 정당
+### 미래한국당 - 반헌법(?) 보수주류 비례정당
 
 ## 제3세력 정당
-## (안철수신당 - 대선주자 중심 제3정당)
-## 새로운보수당 - 보수혁신 정당
+### 민생당 - 민주당계 전라권 제3정당
+### 국민의당 - 
+
 
 ## 사민주의 진보정당
 20세기 내내 한국의 중앙정치는 국가적인 거대담론만이 중요한 의제였다. 국가안보, 경제성장, 반독재, 사회안정, 통일, 외교안보 등등 만이 정치의 중요 의제였고, 대부분 정당이 이 의제 안에서 크게 다르지 않았다. 따라서 대부분의 정치인들은 거물급 정치인 두세 명의 입장만을 바라보며 자신의 행보를 정하곤 했다. 따라서 노동자와 사회적 소수자의 주장을 앞세우며 2000년대 이후 한국에 등장한, 사회경제적 평등과 개인의 인권을 민주주의 체제를 통해 쟁취하겠다는 ‘사회민주주의’(사민주의) 정치세력은 한국 정치에 신선한 충격을 안겨줬다.
@@ -62,46 +64,17 @@
 
 
 ## 극우정당 및 종교정당
-### 우리공화당 - 친-박근혜 극우정당
-<!--### 미래를향한전진4.0 - 친-박근혜 극우정당-->
-
+### 자유공화당 - 친-박근혜 극우정당
+### 친박신당 - 친-박근혜 극우정당
+### 기독자유당 - 개신교 계열 극우정당
 
 ## 원외 진보정당
+### 녹색당
+### 기본소득당
+### 미래당
 
 
 
 
 
 
-
-
-
-
-
-## 더불어민주당: 민주당계 정당
-
-## 자유한국당: 보수주류 정당
-
-## ‘비례한국당’?: 보수주류, 반헌법적 정당
-
-## 새로운보수당: 보수신진 정당
-
-## 바른미래당: 민주당계 정당, 보수신진 정당
-
-<!--## 대안신당: 민주당계 전라권 제3정당-->
-
-## 정의당: 사민주의 정당
-
-<!--## 민주평화당: 민주당계 전라권 제3정당-->
-
-## 우리공화당: 친-박근혜 극우 정당
-
-## 민중당: 민족주의 좌파 정당
-
-## 노동당: 노동당계 정당
-
-## 녹색당: 녹색당계 정당
-
-## 기본소득당: 노동당계 정당?
-
-## 그 외 극우/종교정당
