--- a/03_위원회와 주요 이슈(1).md
+++ b/03_위원회와 주요 이슈(1).md
@@ -85,7 +85,13 @@
 
 ### 국정의 주요 이슈 & 눈여겨볼 선거
 
-#### 
+#### "일 잘하는 직장" 만들기
+
+
+#### "입사지원 자격 넓히기"
+
+
+#### "업무체계·회의체계" 만들기
 
 
 - - -
@@ -132,13 +138,24 @@
 
 ### 국정의 주요 이슈 & 눈여겨볼 선거
 
-#### 부패한 판사
+#### 부패한 판사의 탄핵
 
-#### 판사를 탄핵하라
+판결의 공정
 
-#### 아아 조국, 아아 윤석열
+#### "일 잘하는 직장" 만들기 (2)
+
 
 #### 고위공직자범죄수사처
+
+
+#### "검찰이 왜 (꽃) 거기서 나와?"
+
+
+#### 두 명의 50대 남성 공직자
+
+2019년 하반기 중앙정계를 가장 화려하게 수놓은 이름, 조국 전 법무부 장관과 윤석열 검찰총장. 
+
+
 
 
 - - -
@@ -204,7 +221,7 @@
 문재인 행정부가 들어선 이래 나타난 주요 자연재해로, 2017년 포항-경주에서 일어난 지진과 2019년 강원도 고성-속초지역의 산불이 있었다. 이상의 내용은 
 -->
 
-#### 지방분권 강화와 민주당계 정당
+#### 지방분권 강화
 문재인 행정부는 취임 초부터 지방정부와 지방의회에 더 많은 권한을 부여하는 지방분권 강화 행보를 보여왔다. 지방분권 강화는 민주당계 정당의 오랜 주장이었다. 2010년대에 보수주류 정당이 중앙에서 집권할 동안, 민주당 출신 지방자치단체장은 자체적으로 여러가지 정책을 실험했다. 이 중에서 성공적으로 자리잡은 행정, 복지정책(청년기본소득제, 노인 대상 의료기구 시술비 지원 등) 등이 민주당의 전국 공약으로 확대되었고, 현재의 중앙정부에도 영향을 미쳤다. 
 문재인 행정부가 현재 추진하는 지방분권은, 지방정부가 중앙정부의 개입 없이도 자체적으로 정책을 제안하고 추진할 수 있는 운신의 폭을 넓히는 것이다. 이는 중앙정부의 권한, 특히 예산과 인사권을 많이 양보하는 입법내용을 포함한다. `국세와 지방세(세금은 크게 중앙정부 예산으로 들어가는 국세와, 지방정부 예산으로 들어가는 지방세로 나뉜다. 예를 들어 여러분이 연말정산이나 종합소득세 납부를 실행할 때 보면, 여러분이 내는 소득세는 국세인 ‘소득세’와 지방세인 ‘지방소득세’로 나뉘어져 있다.)`의 비율을 8:2에서 7:3 수준으로 조정한다던가, 지방공무원의 인사제도에 중앙정부가 개입할 여지를 줄인다던가, 지방예산 편성 과정에 주민제안이 반드시 들어가도록 하는 ‘주민참여예산’ 제도를 전국적으로 시행하는 등의 내용이 포함된다. 이러한 조치는 각 지방마다 행정부·의회와 주민자치의 역량에 따라 매우 긍정적이거나 부정적인 상황을 만들 것이라서, 실제 입법과정에서 오랜 토론을 거칠 것이다.
 
@@ -221,8 +238,14 @@
 사실 
 
 
-#### 공공부분 비정규직 문제
+#### 갑에게 줄까, 을에게 줄까?
+
+
+#### 공공부문 정규직과 비정규직
 한국도로공사를 심사하는 국토교통위원회의 소관이지만, 
+
+
+#### 공공부문 특채와 공채
 
 
 
@@ -246,7 +269,7 @@
 김부겸은 2016-2020 국회에서 행안위와 가장 많이 접촉한 의원이다. 김부겸이 이번 국회 행안위에 소속된 적은 없지만, 그는 문재인 행정부의 초대 행정안전부 장관(2017~ 19)이었다. 행안부 장관으로서는 지방자치가 시행된 이후(1995) 역대 3번째로 재임기간이 길고, 공화국의 탄생 이래(1948) 대통령이 취임 직후 임명한 행안부 장관 중에서는 재임기간이 가장 길다. 정권의 힘이 가장 강한 초기에 이만큼 오래 재임했다는 것은, 역대 장관 중에서 중앙정부 및 지방자치에 대한 틀을 만드는 데 가장 깊게 관여했다는 뜻이기도 하다. 김부겸이 가진 무게감(4선 국회의원이자, 민주당계 정당 최초의 대구 지역구 의원)까지 결합되어 독자적인 영향력도 강했을 것이다. 그의 당선 여부는 향후 국회와 정계에도 영향을 발휘해서, 김부겸이 설계한 지방분권 체제가 얼마나 잘 유지될 것인지를 결정할 것이다. 
 
 #### 경남 사천시-남해군-하동군
-**더불어민주당 제윤경(불출마)**
+**더불어민주당 제윤경(비례대표, 불출마)**
 
 
 
