--- a/04_위원회와 주요 이슈(2).md
+++ b/04_위원회와 주요 이슈(2).md
@@ -28,10 +28,18 @@
 
 ### 국정의 주요 이슈 & 눈여겨볼 선거
 
+#### "성적 지향"과 "동성애" 사이
+
+#### 일터에서 살아남을 것. 
+
+#### 치료하는 사람, 치료받는 사람
+
+#### 돈을 받
+
 - - -
 
 #### 서울 송파구 병, 경기 용인시 병
-**더불어민주당 남인순, 더불어민주당 정춘숙**
+**더불어민주당 남인순, 더불어민주당 정춘숙(비례대표)**
 
 남인순(남윤인순)과 정춘숙은 국회의원이 되기 이전부터 여성활동가로 이름이 알려졌다. 각각 한국여성단체연합(여연)과 한국여성의전화(한여전)에서 실무활동가에서 출발해 상임대표까지 맡은 이력을 가지고 있다. 가정과 사회에서 여성들이 받던 물리적 폭력을 공권력이 거의 보호하지 않던 시절, 이들은 여성운동의 현장활동가로서 폭력피해여성을 직접 만나서 함께 대응할 일이 많았다. 
 
@@ -53,12 +61,12 @@
 -->
 
 #### 인천 연수구 을
-**정의당 이정미**
+**정의당 이정미(비례대표)**
 
 사민주의 정당은 노동문제를 노동자의 입장에서 대변하는 정당이고, 그런 정당 소속의 환노위 국회의원은 억울한 노동사건들이 국회에서 논의되도록 하는 중요한 창구 역할을 하게 된다. 2016-2020 국회에서는 이정미가 그런 역할을 맡았다. 파리바게트 비정규직 노동자에 대한 노동법 상습위반, 한국도로공사 톨게이트 노동자의 해고위협 문제, 직장 내 괴롭힘과 비정규직 노동자의 산업안전 사안(일명 ‘김용균법’)을 다루는 <산업안전보건법> 개정안 제안 등, 이정미를 통해 다뤄진 사안들은 한국 사회 전반의 노동문제를 매우 깊숙히 파고드는 문제였다.
 
-#### 인천 미추홀구 갑, 충북 청주시 청원구
-**미래통합당 신보라, 국민의당-미래통합당 김수민**
+#### 인천 파주 갑, 충북 청주시 청원구
+**미래통합당 신보라(비례대표), 국민의당-미래통합당 김수민(비례대표)**
 
 국회의 구성이 점점 늙어가고 (일생에서 가장 곤란한 시기를 겪는) 젊은 여성을 대변하기 어려운 구성이 되어가는 현실 속에서, 2016-2020 국회에서 이를 그나마 잘 대변할 수 있는 의원 2명이 모두 보수정당에서 등장했다. 신보라와 김수민은 `2016년 총선에서 당선된 현역의원(나머지 한 명의 현역 30대 국회의원인 정은혜(더불어민주당)의 경우, 2016년에 비례대표로 출마해서 낙선했으나, 사퇴한 비례대표 의원의 직을 2019년에 승계한 사례이다.)` 중에서 현재 유이한 30대 국회의원으로, 각 당(새누리당, 미래통합당)에서 최고위원과 충북도당위원장 등의 주요 당직을 맡아 주목받았다. 
 
@@ -105,10 +113,24 @@
 
 ### 국정의 주요 이슈 & 눈여겨볼 선거
 
+#### 쿠데타 막기
+
+#### 전쟁 끝내기
+
+#### 강소국 되기
+
+#### "제복입은 시민"
+
+#### 자치경찰, 수사경찰
+
+#### 긴급상황 대비하기
+
+#### 
+
 - - -
 
 #### 서울 동작구 갑, 충북 청주시 상당구
-**더불어민주당 김병기, 정의당 김종대**
+**더불어민주당 김병기, 정의당 김종대(비례대표)**
 
 민주당계 정당과 사민주의 정당이 왠지 모르게 ‘외교안보에 관심이 없다’는 평가를 받다보니, 두 정당에서도 이를 해소할 수 있는 인물을 원하기 마련이다. 국가정보원 인사처장 출신인 김병기, 국방장관 정책보좌관 출신인 김종대는 이런 점을 바탕으로 2016년 총선을 앞두고 각 당에 영입되었다. 
 
@@ -119,9 +141,9 @@
 
 앞서서 본 남인순과 정춘숙의 경우(p. XXX 참고)와 달리, 진선미는 여성문제 관련 소송을 많이 맡는 변호사로서 여성운동에 참여했다. 마침 성범죄와 관련하여 하수상한 시절에, 진선미는 행안위 소속으로 성범죄와 관련된 경찰의 대응을 비판하고, 동성커플이나 결혼하지 않은 노년커플의 생활을 보호하는 정책을 추진하는 데에 앞장섰다. 소라넷의 폐쇄 문제, 불법촬영 및 초소형카메라 문제, `생활동반자법(동거를 하고 경제권을 공유하는 2명의 사람이 신청하면 나이/성별 등에 관계 없이 생활동반자로 지정해서, 주택 구입이나 병원 입원 등 법적 보호자가 필요한 상황에서 혼인관계와 유사하게 인정하는 법률안. 2020년 현재 아직 입법되지 않았다.)` 입법 추진 등이 그 결과물이었다. 진선미는 여성가족부 장관(2018~ 2019)으로 임명된 것도 그 맥락에서 이해할 수 있다. 
 
-특이하게, 그가 소속한 선거구에는 지역에 강력한 영향력을 발휘하고 있는 보수적 대형 종교 커뮤니티(명성교회: 강동구 명일1동)가 자리잡고 있다. 진선미의 그간의 행보가 명성교회 커뮤니티 내부의 반발을 일으킨다면, 2020년 총선에서 어떤 결과로 이어질지 지켜볼 만 하다. 
+특이하게, 그가 소속한 선거구에는 지역에 강력한 영향력을 발휘하고 있는 보수적 대형 종교 커뮤니티(명성교회: 강동구 명일1동)가 자리잡고 있다. 진선미의 그간의 행보가 명성교회 커뮤니티 내부의 반발을 일으킨다면, 2020년 총선에서 어떤 결과로 이어질지 주목할 만 하다. 
 
-#### 경기 평택시 갑, 인천 미추홀구 을
+#### 경기 평택시 갑, 인천 동구-미추홀구 을
 **미래통합당 원유철(불출마), 무소속-미래통합당-무소속 윤상현**
 
 소속정당과 무관하게, 중진 국회의원의 발언과 행보는 외국에서도 상당한 외교적 영향력을 가진다. 언제든 정권교체를 통해 행정부 주요 의사결정권자가 될 수 있고, 또한 민의를 대변하는 국회의원의 발언은 곧 그 나라 유권자가 원하는 외교정책을 발언하는 것이기 하기 때문이다. 중진 국회의원이 외교정책과 관련한 극단적 표현을 삼가야 하는 이유가 여기에 있다. 
@@ -134,7 +156,7 @@
 **활기있는 사회는 부유함 만으로 이룰 수 없다. 배우고, 가르치고, 즐기고, 통찰하고, 상상하여, 사회 전반의 이성과 감성과 신체를 일깨워야 한다. 이런 작업에 국가 예산과 행정력이 투입되어야 한다. 당장은 쓸모없어 보이더라도.**
 
 ### 교육위원회(교육위)
-교육위원회는 교육부가 담당하는 유치원, 초등학교, 중학교, 고등학교, 대학교, 대학원, 직업교육, 평생교육과 관련된 사항을 논의한다. 이것을 ‘교육정책’이라는 한 단어로 퉁치는 것은 너무 가벼운 일이다.  한국의 엘리트 지배계급은 (공)교육사업이 장래 경제문제와 사회문제 등 나라의 근간을 좌우하는 중요한 문제라고 취급한다. 한편으로 공교육은 학생과 보호자의 욕망과 경쟁심이 이글거리는 장이기도 하다. 또 한편으로는 학교에 다니는 청소년들의 생활 공간을 다루고, 교육을 받고 교육을 제공하는 성인 학생, (교사와 연구원 등) 노동자들의 커뮤니티이자 일터를 다룸으로서 사람들의 삶에 큰 영향을 끼치는 영역이다. 한국 사회에서 공교육이 가지는 의미는 이처럼 거대해서, `1년에 72조 5천억 원, 전체 국가재정의 14.1%(2020년도 예산안 기준)`를 투입하는 거대한 사업이다. 한편으로는 입시부정이나 사학의 비리운영과 같은 감사할 구멍도 많고, 또 한편으로는 아무리 잘 굴러가더라도 모두를 만족시킬 수 없는 아주 난해한 사업이기도 하지만.
+교육위원회는 교육부가 담당하는 유치원, 초등학교, 중학교, 고등학교, 대학교, 대학원, 직업교육, 평생교육과 관련된 사항을 논의한다. 이것을 ‘교육정책’이라는 한 단어로 퉁치는 것은 너무 가벼운 일이다. 한국의 엘리트 지배계급은 (공)교육사업이 장래 경제문제와 사회문제 등 나라의 근간을 좌우하는 중요한 문제라고 취급한다. 한편으로 공교육은 학생과 보호자의 욕망과 경쟁심이 이글거리는 장이기도 하다. 또 한편으로는 학교에 다니는 청소년들의 생활 공간을 다루고, 교육을 받고 교육을 제공하는 성인 학생, (교사와 연구원 등) 노동자들의 커뮤니티이자 일터를 다룸으로서 사람들의 삶에 큰 영향을 끼치는 영역이다. 한국 사회에서 공교육이 가지는 의미는 이처럼 거대해서, `1년에 72조 5천억 원, 전체 국가재정의 14.1%(2020년도 예산안 기준)`를 투입하는 거대한 사업이다. 한편으로는 입시부정이나 사학의 비리운영과 같은 감사할 구멍도 많고, 또 한편으로는 아무리 잘 굴러가더라도 모두를 만족시킬 수 없는 아주 난해한 사업이기도 하지만.
 
 교육위는 지역구 국회의원들이 들어가기 선호하는 위원회 중 하나다. 지역 내 교육시설이나 교육관련 예산을 유치하는 것이 지역구에서 다시 당선되는 데에 중요한 역할을 하기 때문이다(배정된 예산이 많다는 것은 따올 수 있는 예산이 많다는 의미이기도 하다). 특히 2010년대 초까지 특수목적고등학교나 자립형/자율형사립고 유치 열풍이 불었을 때, 교육위 소속 국회의원들은 이러한 고등학교의 설립/전환을 최종 인가하는 교육부를 직접 상대할 수 있었다. 이것은 현재에도 대학교 시설 또는 분교 유치, 도서관 유치와 같은 지역사업의 형태로 지속되고 있다. 
 
@@ -155,6 +177,22 @@
 
 ### 국정의 주요 이슈 & 눈여겨볼 선거
 
+#### 교육 질 높이기
+
+#### 대학교 입시
+
+#### 대학교 구조조정
+
+#### 대학교 내 연구 문제
+
+#### 블랙리스트와 아카데미
+
+#### 온라인 접속차단
+
+#### 공정방송, 공정언론
+
+#### 언론, 포털
+
 - - -
 
 #### 서울 강북구 갑
@@ -164,14 +202,14 @@
 
 박용진은 이 과정에서 사립유치원의 비리운영문제를 중앙정치의 주요 이슈로 끌어올리고 효과적인 전국적 여론전을 펼쳤다. 사립유치원 경영자들은 지역구 내부의 여론을 좌지우지하여 국회의원을 낙선시킬 힘이 있다고 여겨졌는데, 이를 정면으로 되받아치는 데 성공한 것이다.
 
-#### 인천 미추홀구 갑
-**미래통합당 전희경**
+#### 인천 동구-미추홀구 갑
+**미래통합당 전희경(비례대표)**
 
 전희경은 국회의원으로서의 활동보다는, 자유경제원 등 `뉴라이트(자유지상주의 경제관, 반공보수적 역사관을 바탕으로 보수우파 사상계를 재편하자는 움직임. 2006년 즈음부터 여러 시민단체를 통해 구체적으로 드러났으며, 역사학 측면에서는 일제강점기와 이승만 행정부의 긍정적 재해석을 시도하고 있다.)` 계열의 시민단체에서 활동했던 것으로 더 유명하다. 2015년 박근혜 행정부가 중고등학교 한국사 교과서를 교육부가 출판하는 1개 종류만 사용하는 정책(한국사 교과서 국정화)을 추진할 때, 전희경은 시민사회 안에서 이를 가장 강력하게 주장하고 보수주류 정당(새누리당)의 초청을 받아 강연을 진행하기도 하였다. 
 전희경은 그 과정을 거쳐, 2016년 총선에서 새누리당의 비례대표 당선권(순번 9번) 후보로 공천받고 당선되었다. 정작 국회의원이 된 이후 전희경의 활동이 두드러지진 않았지만, 4년간 교육위에 개근하면서 교육에 대한 지대한 관심을 보였다. 만약 2020-2024 국회에서 한국사 교육과 관련된 이슈가 등장한다면, 가장 적극적으로 뛰어들 사람이다.
 
 #### 서울 서초구 을, 대전 유성구 을
-**더불어민주당 박경미, 국민의당-미래통합당 신용현**
+**더불어민주당 박경미(비례대표), 국민의당-미래통합당 신용현(비례대표)**
 
 언젠가부터 기성 정당에서는 여성 이공계열 종사자를 비례대표 1번으로 공천하는 풍습이 자리잡았다. 수학교육학 교수였던 박경미, 한국표준과학연구원장을 역임한 신용현은 2016년 총선에서 각각 더불어민주당, 국민의당의 비례대표 순번 1번으로 당선되었다. 각 정당은 이공계를 중시한다는 상징으로 이들을 선거기간동안 내세우기도 했으며, 이들 국회의원 역시 (상임위원회를 2년 간격으로 바꾸는 보통의 경우와 달리) 각각 교문위와 과방위에서 4년을 꼬박 활동하였다. 
 
@@ -225,17 +263,34 @@
 
 ### 국정의 주요 이슈 & 눈여겨볼 선거
 
+#### 기후변화 위기
+
+#### 에너지 생산, 관리, 소비
+
+#### "농민 프랜차이즈"와 농민 기본소득
+
+#### 타다, 인터넷 은행
+
+#### "개인정보 3법"
+
+#### 인터넷망은 모두에게 평등한가?
+
+#### 4기 신도시와 집값
+
+#### 말은 기수 없이 달릴 수 없다
+
+
 - - -
 
 #### 부산 서구-동구?
-**미래통합당 송희경**
+**미래통합당 송희경(비례대표)**
 여성 이공계열 종사자를 비례대표 1번으로 공천하는 풍습(p. XXX 참고)은 보수주류 정당도 예외가 아니었다. 2016년 새누리당 비례 1번으로 당선된 송희경은 KT 전무이사를 지낸 컴퓨터공학 및 경영학 전공자이다. 이력에서 볼 수 있듯 그는 연구직보다는 산업계 종사자라고 볼 수 있다. 이런 속성을 가진 의원의 입법활동은 자세히 관찰해야 한다. 산업의 구조와 발전상황을 잘 파악하고 있는 인물이기에 산업의 발전을 위해 당장 필요한 양질의 입법활동을 기대할 수 있지만, 한편으로는 이미 자리잡은 기존 기업의 이해관계에 맞춘 입법활동을 하여, “이익보는 일은 기업이 사유화하고 손해볼 일은 사회에 떠념겨서” 산업의 발전을 가로막을 수도 있기 때문이다. 
 
 아무튼 IT계열 창업이 주목받고 촉진되어야 한다는 여론이 큰 상황에서, 그는 보수주류 정당이 이를 가장 잘 대변할 수 있다고 앞세워진 인물이다. 실제로, 그는 과방위에서 4년 동안 있었을 뿐만 아니라, 보수주류 정당 내에서 경제산업 문제에 관여하는 조직에 왠만하면 참여하는 당내 주요 인사가 되었다.
 
 
 #### 경기 고양시 정
-**더불어민주당 김현미(불출마), 미래통합당 김현아**
+**더불어민주당 김현미(불출마), 미래통합당 김현아(비례대표)**
 
 부동산 가격, 특히 주택 가격과 임대료 관련 문제는 민주당계 행정부에서 언제나 주요 공격/방어 이슈였다. 그 이슈의 한 가운데에 있을 두 의원을 소개한다. 문재인 행정부 초대 국토교통부 장관(2017~ ) 김현미, 그리고 도시기획자 출신의 김현아. 김현미는 부동산 문제에 매우 민감한 일산 지역구의 3선 의원으로서 의견을 직접 청취해왔다는 전문성이 있고, 김현아는 2016년에 비례대표로 당선되어 실무 전문성이 아직 살아있다는 강점이 있다. 국회 대정부질문에서 김현아는 김현미를 상대로 자주 질의를 했고, 두 사람의 질의응답은 문재인 행정부의 부동산 정책의 방향성 전체에 대한 날선 공방으로 이어졌다.
 
