--- a/05_중부지방 권역.md
+++ b/05_중부지방 권역.md
@@ -64,19 +64,22 @@
 2016년 총선에서 일어난 가장 큰 격변은, 박근혜 행정부 초대 보건복지부 장관이었으나 사실상 경질당했던 3선 의원 진영이, 새누리당을 탈당하고 더불어민주당에 입당하여 4선에 성공한 것이었다. 이 한 방으로 용산은 물론이고, 박근혜 대통령을 평가하는 구도였던 전국의 선거판이 크게 흔들렸다. 행정안전부 장관이 된 진영은 2020년 선거에 출마할 수 없기 때문에, 용산은 이제 완전히 새로운 후보군을 맞이할 것이다. 
 한 가지 분명한 것은 보수주류 정당의 지역구/비례대표 득표율 사이의 상관관계이다. 진영이 워낙 압도적이었던 2008년을 제외하면, 2004, 12, 16년 선거에서 용산의 보수주류 정당 지역구 후보의 지지율은 언제나 ‘용산 비례대표 득표율 + 5%p’였다. 보수주류 정당이 용산에서 당 차원의 탄탄한 지지층을 얼마나 확보하느냐에 따라, 각 정당 지역구 후보의 득표율도 달라질 것이다. 
 
+<!--
 #### 서울 노원구 병
 **전국구 배틀그라운드 #2**
-
 사실, 이념에 따른 정당구도가 자리잡은 이후 종로보다도 전국구로 좀 더 주목받은 지역구가 따로 있다. 2004년에 처음 설치된 노원구 병으로, 이 곳에서는 전국구 인물이 계속 당선되었다. 04년에 민주당계 정당의 4선 중진(임채정: 열린우리당), 08년에 보수주류 정당의 소장파로 알려진 언론사 사장 출신의 젊은 초선(홍정욱: 한나라당), 12년에 서울 최초의 사민주의 정당 의원(노회찬: 통합진보당-정의당), 14년(보궐선거)과 16년에 제3정당의 유력 대선후보(안철수: 무소속/국민의당)가 이 곳에서 선출되었다. 이 시기의 주요 낙선자로는 노회찬 공동대표(진보신당: 2008), 허준영 전 코레일 사장(새누리당: 2012), 이준석 최고위원(새누리당: 2016, 바른미래당: 2018)이 있는데, 이들은 선거 당시에 이미 전국구 인물이라고 평가받았다. 
 2018년 보궐선거에서 당선된 현역 의원은 지역구 역사상 가장 덜 유명한(?) 인물, 전직 재선 노원구청장(2010~ 18) 김성환이다. 그가 이번에 다시 출마한다면, 노원구 병은 총선에서 최초로 전국적인 이슈 뿐만 아니라 동네 특화 이슈를 바탕으로 선거를 치르게 될 수도 있다. 이 경우에도 민주당계 정당이 승리할 수 있을지 지켜볼 만 하다. 행정구역상 “상계동”이라고 일컬어지는 노원구 병은, 한강이북에서 보기 드물게 대단지 주공아파트와 학원가가 밀집하여 동네 특화 이슈가 등장하기 좋다.
+-->
 
 #### 서울 마포구 을
+**
 
-#### 서울 양천구 을, 강서구 을, 구로구 을
-**자유한국당 서울시당 최후의 보루**
-
-2010년대에 서울의 보수주류 정당 중진들이 우수수 낙선한 탓에, 3선의 김용태(양천구 을)와 김성태(강서구 을)는 나경원(동작구 을, p.000 참조)과 함께 자유한국당의 서울지역 중진 의원으로 입지가 격상되었다. 김용태와 김성태는 2008년부터 같은 지역구에서 3선을 했고, 2017년에 보수개혁 정당(바른정당) 창당에 주도적으로 참여했다가 자유한국당으로 복당했다. 이 때의 당적변경으로 많은 유권자에게 비난받았으나, 정작 자유한국당 안에서는 ‘박근혜 복권파’를 비롯한 당의 극우파를 견제할 몇 안되는 인물이라고 기대받았다. 실제로 두 의원은 2018년에 각각 자유한국당 사무총장과 원내대표를 맡았고, 당의 2018년 지방선거 패배를 수습하는 데에 나름의 역할을 했다고 평가받는다. 
-2020년 총선을 앞두고 김성태는 불출마를 선언했고, 김용태는 민주당계 정당(박영선)이 3연승한 구로구 을 지역구로 자리를 옮긴다. 만약 김용태와 김성태의 전현직 지역구에서’조차도’ 미래통합당이 패배한다면, 이 결과는 미래통합당이 서울에서의 대중성을 완전히 잃어버렸고 이를 회복할 인물마저 없어졌다는 증거처럼 여겨질 것이다. 반대로 이들의 작전이 성공한다면, 이들은 향후 미래한국당의 서울 수복을 최전선에서 이끌 것이다. 지역기반이 서울이거나 중도보수적 입장을 가진 미래한국당 정치인들은 이번 선거에서 세 지역구에서 반드시 이기기를 간절히 기원할 것이다.
+<!--
+#### 서울 강서구 을, 구로구 을
+**미래한국당 서울시당 최후의 보루**
+2010년대에 서울의 보수주류 정당 중진들이 우수수 낙선한 탓에, 3선의 김용태(양천구 을)와 김성태(강서구 을)는 나경원(동작구 을, p.000 참조)과 함께 서울지역 중진 의원으로 입지가 격상되었다. 김용태와 김성태는 2008년부터 같은 지역구에서 3선을 했고, 2017년에 보수개혁 정당(바른정당) 창당에 주도적으로 참여했다가 자유한국당으로 복당했다. 이 때의 당적변경으로 많은 유권자에게 비난받았으나, 정작 자유한국당 안에서는 ‘박근혜 복권파’를 비롯한 당의 극우파를 견제할 몇 안되는 인물이라고 기대받았다. 실제로 두 의원은 2018년에 각각 자유한국당 사무총장과 원내대표를 맡았고, 당의 2018년 지방선거 패배를 수습하는 데에 나름의 역할을 했다고 평가받는다. 
+2020년 총선을 앞두고 김성태는 불출마를 선언했고, 김용태는 민주당계 정당(박영선)이 3연승한 구로구 을 지역구로 자리를 옮긴다. 만약 김용태와 김성태의 전현직 지역구에서‘조차도’ 미래통합당이 패배한다면, 이 결과는 미래통합당이 서울에서의 대중성을 완전히 잃어버렸고 이를 회복할 인물마저 없어졌다는 증거처럼 여겨질 것이다. 반대로 이들의 작전이 성공한다면, 이들은 향후 미래한국당의 서울 수복을 최전선에서 이끌 것이다. 지역기반이 서울이거나 중도보수적 입장을 가진 미래한국당 정치인들은 이번 선거에서 세 지역구에서 반드시 이기기를 간절히 기원할 것이다.
+-->
 
 #### 서울 관악구 갑·을
 **복잡다난한 총선에서 가장 복잡다난한 지역구**
@@ -84,15 +87,6 @@
 2000~ 12년의 4번의 총선에서, 보수주류 정당은 관악구 을에서 0번, 갑에서 1번만 승리한다. 관악구는 젊은 인구구성, 서울대학교를 중심으로 한 사회개혁 여론, 상대적으로 낮은 소득수준, 높은 비율의 전라권 이주민 비중의 4가지 요소가 합쳐져 민주당계 정당의 지지세가 매우 강하다. 같은 이유로 사민주의 정당의 지역조직도 탄탄하다. 사민주의 정당은 같은 기간의 8번(갑·을) 중에서 5번이나 5%를 넘는 득표율을 기록했는데, 그 중 한 번은 민주-진보연대를 통해 당선되기도 했다(이상규: 2012, 관악구 을, 통합진보당). 
 그러나 관악구 갑·을의 현재 국회의원인 김성식(p.000 참조)과 오신환은 과거 보수주류 정당에 몸담은 적 있는 중도보수 계열 정치인이다. 2016년 총선에서 두 후보의 당선은 나름의 파란이었다. 김성식은 안철수와 함께 전라권 바깥에서 당선된 국민의당 유이의 지역구 국회의원었고, 오신환은 지역구 사상 첫 보수주류 정당(새누리당) 의원이 재선까지 성공한 경우였다. 두 의원은 2019년 바른미래당 원내대표 선거에서 맞붙을 정도로, 당내외에서 두루 인정받는 중견 정치인이 되었다. 
 관악구는 이처럼 거대양당 뿐만 아니라 3~ 4개의 다양한 정당들이 경쟁을 통해 유의미한 득표율을 기록할 수 있는 곳이다. 따라서 모든 정당이 공을 들여 난투를 벌이는 재미있는 구도를 관찰할 수 있을 것이다. 
-
-#### 서울 강남구 갑, 송파구 병
-
-<!--
-관악구는 젊은 인구구성, 서울대학교를 중심으로 한 사회개혁 여론의 중심지, 상대적으로 낮은 소득수준, 높은 비율의 전라권 이주민 비중의 4가지 요소가 합쳐져서, 민주당계 정당 뿐만 아니라 사민주의 정당의 지역조직이 다른 지역구에 비해서 매우 강하다. 2000~ 2012년 사이의 4번의 총선에서, 보수주류 정당은 관악구 갑에서 1번 승리하고, 을에서는 한 번도 당선되지 못한다. 한편 사민주의 정당은 같은 기간의 8번(갑·을) 중에서 5번이나 자력으로 5%가 넘는 득표율을 기록했는데, 그 중 한 번은 민주-진보연대를 통해 당선되기도 했다(이상규: 2012, 관악구 을, 통합진보당).  
-그러나 현재 국회의원은 모두 과거 보수주류 정당에 몸담은 적 있는 중도보수 계열 정치인이다. 관악구 갑의 김성식은 2008년에 보수주류 정당(한나라당)으로 당선되었고, 2012년 이후 안철수의 창당작업에 지속적으로 참여하여 2016년 민주당계 중도정당(국민의당)으로 다시 당선된다. 이로서 그는 안철수와 함께, 전라권 바깥에서 당선된 국민의당 유이의 지역구 국회의원이 된다. 당시에 관악구 을에서도 국민의당(이행자) 후보는 23.5%의 고득표를 기록해서, 국민의당의 지역 조직력을 한껏 드러냈다.
-한편 관악구 을의 오신환은 2015년에 당선된 지역구 사상 첫 보수주류 정당(새누리당) 소속 의원이다. 다만 그는 2017년부터 바른정당-바른미래당-새로운보수당으로 이어지는 보수개혁 정당과 함께 한다. 김성식과 오신환은 2019년 바른미래당 원내대표 선거에서 출마해 맞붙을 정도로, 당내외에서 중진으로 두루 인정받는 정치인이 되었다. 
-관악구는 이처럼 거대양당 뿐만 아니라 3~ 4개의 다양한 정당들이 경쟁을 통해 유의미한 득표율을 기록할 수 있는 곳이다. 따라서 모든 정당이 공을 들여 난투를 벌이는 재미있는 구도를 관찰할 수 있을 것이다. 
--->
 
 
 
@@ -127,7 +121,7 @@
 
 고양은 자연발생한 읍내가 따로따로 발전하다가 90년 1기 신도시가 개발되며 도시급으로 늦게 성장했다. 고양군 시절에는 보수주류 정당의 안정적 지지세가 유지되었으나 2000년 총선부터 서울에 출퇴근하는 중산층 유권자를 중심으로 민주당계 및 사민주의 정당에 대한 지지세로 완전히 돌아선다. 대선주자급 정치인인 `심상정(고양시 덕양구 갑: 2012~ )`, `유시민(고양시 덕양구 갑: 2003~ 08)`, `한명숙(고양시 일산구 갑: 2004~ 08)`, `최성(고양시 덕양구 을: 2004~ 08)`이 자리잡았고, ‘중산층 신도시 중진’의 무게감을 바탕으로 문재인 행정부의 장관직을 맡은 `유은혜(고양시 일산동구: 2012~ 20)`, `김현미(고양시 일산서구: 2012~ 20)`가 자리잡았다.
 
-다만 2010년대부터 세 도시 모두 과거에 비해 민주당계 및 사민주의 정당에 더 우호적으로 변한다는 공통점이 있다. 성남 분당에서 `손학규(성남시 분당구 을: 2011~ 12)`가 승리한 2011년 보궐선거, 민주당계 정당(더불어민주당)이 성남 분당(갑/을)과 수원 팔달구(수원시 병)가 모두 승리한 2016년 총선 등, 보수주류 정당의 다선 의원이 나온 지역구에서 민주당계 정당이 연이어 승리하고 있다. 이것은 민주당계 정당이 시간이 지나면서 “수도권, 대도시의 지지를 받는 보수정당”으로 자리잡는 과정일 수도 있다. 
+다만 2010년대부터 세 도시 모두 과거에 비해 민주당계 및 사민주의 정당에 더 우호적으로 변한다는 공통점이 있다. 성남 분당에서 `손학규(성남시 분당구 을: 2011~ 12)`가 승리한 2011년 보궐선거, 민주당계 정당(더불어민주당)이 성남 분당(갑/을)과 수원 팔달구(수원시 병)에서 모두 승리한 2016년 총선 등, 보수주류 정당의 다선 의원이 나온 지역구에서 민주당계 정당이 연이어 승리하고 있다. 이것은 민주당계 정당이 시간이 지나면서 “수도권, 대도시의 지지를 받는 보수정당”으로 자리잡는 과정일 수도 있다. 
 
 ### 서울 서남부 인접 위성도시
 지금 이 파트에서 설명하는 “서울 서남부 인접 위성도시”는 인천과 서울의 공업지대 사이에 위치하며 배드타운으로 성장한 부천, 안양, 광명, 군포, 시흥 등을 묶은 표현이다. 30~ 80만 인구를 차지하는 각 도시를 합치면, 대구광역시의 절반 정도 되는 면적 안에 대구를 살짝 뛰어넘는 숫자의 인구(약 250만 명)를 가진 인구 초밀집 권역이 된다. 이 권역은 1990년대의 수도권 1기 신도시 사업으로 대단지 아파트가 들어서면서 인구가 폭발적으로 늘어났다. 하지만 이 권역의 정치사를 알기 위해서는, 이 지역에서 신도시보다 더 일찍 조성되었던 1960~ 70년대 주거지의 역사를 알아야 한다.
@@ -159,27 +153,47 @@
 
 ### 주목할 지역
 
-#### 인천 연수구 을
+<!--
+#### 인천 연수구 을, 경기 고양시 갑
+**사민주의 정당 비례 1번의 신화**
+이정미(2016년 정의당 비례 1번 후보)의 연수 을 출마를 통해, 심상정(2004년 민주노동당 비례 1번 후보) 이후로 `12년 만에(2008년 민주노동당 비례 1번 곽정숙은 2012년에 불출마. 2012년 통합진보당 비례  1번 윤금순은 당선 직후, 경선 부정 논란에 따른 후보 총사퇴 때 함께 사퇴.)` 사민주의 정당의 비례 1번이 지역구에서 재선에 도전한다. 비례대표를 통해 의정활동을 경험한 사민주의 정당 후보가 지역구에 등장하는 것은, 지역 전체 여론지형을 뒤집을 수 있는 문제다. 심상정
+-->
 
 
 #### 인천 부평구 갑
+**문병호의 부평삼분지계**
+
+부평 갑은 2016년 총선에서 1-2위 표차가 가장 적었던 지역구(26표)다. 당시 현역 문병호가 인천에서 유일한 국민의당(민주당계 제3정당) 현역의원으로 출마했고, 득표율 기준으로 새누리당(보수주류) 34% : 더불어민주당(민주당계) 27% : 국민의당 34%로 세 당이 거의 비슷한 세력을 차지했다. 2020년 총선에서 문병호는 보수주류 정당(미래통합당)으로 당적을 옮긴 뒤 서울(영등포구 갑)로 이동하여 전략공천되었다. 지난 총선에서 국민의당을 지지한 34%의 유권자가 어디로 이동할 것인가? 문병호의 지역조직이 여전히 탄탄하다면 미래통합당으로 기울겠지만, 그를 지지한 사람들이 사실은 민주당계 정당에 표를 주었던 것이라면, 사정이 달라질 것이다.
 
 
+<!--
 #### 경기 성남시 분당구 갑/을
+** **
+수도권에서 진격의 민주당을 보여주는 
+-->
 
 
 #### 경기 용인시 정, 남양주시 갑
+**민주당 신인 정착 프로젝트**
 
+2016년 총선에 각 정당이 후보로 영입한 '인재' 중에서, 정치 고관심층이 가장 흥미롭게 바라본 후보는 표창원과 조응천이었다. 표창원은 2012년 대선 직전 "국정원의 댓글 여론조작 작업을 수행한 것으로 보이는 오피스텔은 압수수색 영장을 발부해서 수사해야 한다"는 의견을 표명함과 동시에 경찰대학교 교수직을 사임한 것으로 유명했고, 조응천은 박근혜 행정부의 대통령비서실 공직기강비서관으로 정윤회(최서원(최순실)의 전 남편)가 국정 전반에 부당한 영향력을 행사한다는 감찰보고서를 작성했다가 문건이 유출되며 검찰에 고발된 것으로 유명했다.
 
-<!--#### 경기 안양시 만안구, 동안구 갑/을-->
+두 인물 모두 유명하긴 하지만 2016년에 더불어민주당에 영입되어 정치활동을 전혀 하지 않았던 상태에서, 이들은 신설 지역구에 공천되어 당의 전폭적인 지원 하에 당선되었다. 더불어민주당은 상징적인 유명인사를 후보로 내세워 신설 지역구를 개척해보자는 배팅을 걸었고, 성공했다. 4년이 지나서 돌아온 총선에서, 이 때의 배팅은 어떤 결과를 불러올까? 3월 8일 현재, 표창원이 불출마를 선언한 용인 정에는 판사 출신의 영입후보 이탄희가 공천되었고, 조응천은 남양주 갑에서 재선에 도전한다. 
 
-#### 경기 의정부시 갑, 안양시 만안구
+#### 경기 안양시 만안구, 동안구 갑/을
+**중진이 빠졌다 (1)**
+
+안양의 현역 의원 3인, 이종걸(2000~ 20), 이석현(1992~ 2000, 04~ 20), 심재철(2000~ ). 3개의 지역구에서 합해서 총 16선. 2번의 국회부의장(이석현, 심재철)과 2번의 원내대표(이종걸, 심재철) 역임. 인구 약 60만 명의 규모있는 수도권 도시에서 국회의원이 되면, (전라권이나 경상권 처럼) 각 당의 승리가 보장되지 않은 이름있는 도시에서 승리했다는 정치적 중량감을 얻게 된다. 그 자리를 얻기 위한 치열한 경쟁이 벌어지기 마련이다. 따라서 이런 도시에서 다선 의원이 이렇게 많이 모여있는 경우를 찾기는 쉽지 않다. 
+
+문제는 2020년 총선이다. 더불어민주당의 두 의원(이종걸, 이석현)은 당내 경선에서 탈락했다. 미래통합당 소속으로 홀로 살아남은(?) 심재철의 상대 후보는 2004년부터 4연속으로 맞붙었던 더불어민주당 후보(이정국)가 아니라, 더불어민주당과 정의당의 40대 여성 비례대표 초선 의원들(이재정, 추혜선)로 결정되었다. 안양 전체의 선거구도가 급변하는 상황이라서, 안양의 선거를 관찰하는 맛이 있을 것이다. 
 
 
 #### 경기 평택시 갑, 용인시 병
+**중진이 빠졌다 (2)**
 
+미래통합당의 중진, 원유철(1996~ 2004, 08~ 20)과 한선교(2004~ 20)도 지역구에서 불출마한다. 다만 이들은 경선에서 탈락한 것이 아니라, 2020년 2월과 1월에 직접 불출마를 선언한 것이다. 중진의 예상치 못한 불출마는 당 바깥에서 보기에는 혁신의 산물이지만, 당 내부 입장에서는 '예상치 못한 새로운 일자리'의 등장인 셈이다. 자연스럽게 출마하려는 사람들이 엄청나게 모이기 마련이다. 
 
-#### 경기 의왕시-과천시
+문제는, 그 불출마 선언이 선거 투표일 약 100일, 60일 전에 발표되었다는 점이다. 처음부터 중진과 경쟁하려고 마음 먹은 후보들은 경선구도가 갑자기 뒤바뀌어 당황할 것이고, 중진이 사라졌기에 가능성을 보고 새로 들어온 후보들 역시 사전에 철저히 준비하기는 어려웠을 것이다. 또한 설령 경선을 통과하더라도, 선거를 치르기 위해 지금까지 중진이 다져놓은 지역조직을 흡수하여 활용할 수 있도록 하는 데에도 상당한 작업이 필요하다. 이 힘든 작업이 잘 이뤄지느냐에 따라, 선거구도가 급변할 수 있다. 
 
 
 
@@ -213,8 +227,10 @@
 
 권성동의 당선 여부는 영동지방(태백산맥 기준 동쪽, 동해 인근 지역) 뿐만 아니라 한국 전체의 관심을 받을 것이다. 그는 동료인 염동열 의원(자유한국당, 강원 태백시-횡성군-영월군-평창군-정선군)과 함께 강원랜드에 직원 채용청탁을 알선했다는 혐의로 기소되었으나, 염동열과 달리 증거가 불충분하다는 이유로 법원은 1·2심에서 모두 무죄판결을 내린 상황이다. 여기에 바른정당에 몸담았다가 금방 탈당한 경력, 국회에서의 역할과 의정활동 행보까지 더해져서, 권성동에 대한 지역구 내 평가는 옹호와 비판이 복잡하게 뒤섞인 양상을 띨 것이다.
 
+<!--
 #### 강원 홍천군-철원군-화천군-양구군-인제군
 **전국 최대 면적 선거구**
 전국에서 가장 넓은 선거구가 이 곳이다. 이 곳은 춘천을 둘러싸는 5개 군이 합쳐진 선거구로, 강원도 전체 면적의 1/3을 차지하고, 고성군을 제외한 강원도 DMZ 접경지대 전체를 포괄한다. 
 여러 행정구역이 합쳐진 선거구에서는 보통, 각 시·군마다 자기 지역 출신의 후보를 선출하려는 소小지역주의가 발현하곤 한다. 이 지역구에서는 이 문제가 특히 심각할 것이다. 접경지대인 철원-화천-양구-인제와 춘천 남단에 위치한 홍천은 춘천시와 한강으로 갈라져서, 하나의 지역구라는 정체성을 가지는 것이 도저히 불가능하다. 2016년 총선에서는 민주당계 정당(조일현)과 보수주류 정당(황영철) 후보가 모두 홍천군 태생이었는데, 이 때문에 철원 태생의 정해용(무소속) 후보가 철원-화천-양구-인제에서 다득표하여 14.61%의 득표율을 기록하기도 했다. 정해용은 철원에서 33.65%의 득표율로 조일현을 제치고 2위를 기록했지만, 홍천에서는 4.14%밖에 득표하지 못한다.
+-->
 
