--- a/06_남부지방 권역.md
+++ b/06_남부지방 권역.md
@@ -45,14 +45,29 @@
 
 ### 주목할 지역
 
-#### 대전 유성구 갑/을
+#### 대전 유성구 (갑/을)
+**“젊은 고학력 연구직”**
+
+대덕연구단지(대덕구가 아닌 유성구에 있다), 충남대학교와 한국과학기술원(KAIST)이 위치한 이유로, 유성구에는 “젊은 고학력 자연과학 및 공학기술 연구직” 유권자가 많다. 이 인구구성은 충청권에서 민주당계 및 사민주의 정당에게 가장 친화적인 표심으로 발현된다. 2016년 총선의 비례대표 정당투표 득표율로 보자면, 유성구는 충청권에서 유일하게 정의당이 10%를 넘게 득표한 곳이자, 충청권에서 유일하게 더불어민주당과 국민의당이 모두 새누리당(보수주류 정당)보다 많이 득표한 곳이었다. 
+
+여의도의 중앙정계에서 바라보기에, (인문학 및 사회과학 연구직종 유권자와 달리,) 자연과학 및 공학기술 연구직종 유권자의 표심 성향은 좀처럼 파악하기가 어렵다. 정책이나 이념을 바라보는 방식과 관점이 다르고, 양측이 생각하는 '정견의 일관성 및 합리성'도 다르며, 이를 밖으로 드러내서 표현하는 방식도 다르기 때문이다. 직업정치인 중에서 자연과학 및 공학기술 연구직종 유권자에 관심이 있는 분들에게는 유성구의 선거 결과(특히 비례대표 정당투표)가 자그마한 힌트가 되어줄 것이다. 
 
 
 #### 충북 제천시-단양군, 충남 천안시 갑
+**f(2016) > f(2020) > f(2018)**
 
+보수주류 정당은 2016년 총선에서 두 지역구에서 역사적인 기록을 세웠으니, 제천시 통합(제천시+제원군)과 천안시 통합(천안시+천안군)이 이뤄진 1995년 이후, 제천시-단양군에서의 최다득표율(58.19%), 천안시에서의 `총선거 첫 승(재보궐선거를 포함하면, 2010년 천안시 을에서 당선된 김호연이 있다.)`을 기록했다. 그러나 두 당선자(권석창, 박찬우)가 모두 선거법 위반으로 당선무효가 되었고, 2018년에 지방선거와 함께 시행된 재선거에서는 더불어민주당(이후삼, 이규희) 후보가 2년 전에 비해 득표율이 약 15%p씩 상승하며 모두 승리한다. 더불어민주당의 지지율이 전국적으로 가장 높았던 시기의 선거였다.
+
+중원의 표심이 어떻게 흘러갈지 여전히 불확실한 상황에서, 제천시-단양군과 천안시 갑의 선거결과는 중원의 표심 해석에 중요한 바로미터가 될 것이다. 충청권 보수정당을 흡수한 보수주류 정당이 가장 강력했던 2016년과, 민주당계 정당의 최고 전성기 2018년 사이의, 그 어딘가에서 2020년의 결과가 정해질 것이다.
 
 #### 충남 논산시-계룡시-금산군
+**불사조 꼬리의 불이 꺼진 후**
 
+이인제가 보수주류 정당의 중진이라고 알려져 있지만, 의외로 그는 충남에서 당선되었을 때 단 한번도 보수주류 정당 후보인 적이 없었다. 2000년부터 충청권 보수 제3정당(자유민주연합, 자유선진당)과 민주당계 정당(새천년민주당), 무소속을 거쳐 논산-계룡-금산에서 4선을 했다. 2016년, 그가 `24년 만에(이인제는 1988/92년 총선에서 각각 민주당계(통일민주당), 보수주류(민주자유당) 정당 후보로 경기 안양시 갑에 출마, 당선되었다. 이 당적이동은 개인의 탈당이 아니라, 3당 합당에 의한 것이다.)` 보수주류 정당(새누리당) 후보로 총선에 출마하자마자 낙선한다. 득표율은 거의 변동이 없었음에도(2012년 42.36%, 2016년 42.55%) 불구하고 말이다.
+
+이 글을 쓰는 현재(3월 6일) 이인제는 미래통합당 경선에서 탈락했고, 그의 무소속 출마 여부가 확정되진 않았다. 만약 정말로 이인제 없이 선거가 시행된다면, 
+
+정말로 그렇다면, 이인제를 중심으로 한 인물구도가 해체된, 정당과 정당의 후보가 맞붙는 구도가 논산-계룡-금산에서 무려 20년 만에 부활한다. 물론, 이 때에도 이인제가 특정 후보를 지지하고 지원유세를 하면서 다시 이인제가 전면에 부상할 수도 있겠지만.
 
 
 
@@ -99,13 +114,29 @@
 
 ### 주목할 지역
 
-#### 전북 군산시
+<!--#### 전북 군산시-->
 
 #### 전북 남원시-임실군-순창군
+**후보들에겐 슬픈 전설이 있어 (1)**
+
+2016년 총선에서 `가장 많은 후보(8명)(“정치 1번지”라는 상징성 때문에 모든 정당이 왠만하면 꼭 출마하는 서울 종로구(10명)는 제외한다.)`가 출마한 첫 번째 지역구는 남원-임실-순창이다. 이 지역구에는 2012년 총선(당시 "남원시-순창군" 지역구)의 양강 후보였던 이강래와 강동원의 슬픈 전설이 담겨있다. 
+2012년 총선에서, 당시 현역 3선의원이던 민주당계(민주통합당) 이강래와 국회의원 첫 출마인 사민주의 정당(통합진보당) 강동원이 맞붙었고, 여기서 강동원이 승리하여 당시에는 이변으로 받아들여졌다. 그러나 2014년, 강동원이 돌연 사민주의 정당(정의당)을 탈당하고, 안철수가 추진하던 신당에 합류하려다가 안철수와 함께 민주당계 정당(새정치민주연합)에 입당한다. 2016년 총선 직전, 이강래는 강동원을 피해 서울 서대문구 을로 지역구를 옮기지만 경선에서 패배한다. 한편 강동원은 그대로 남원-임실-순창에 출마하지만 경선에서 컷오프당하고, 이에 반발해 무소속으로 출마한다. 가장 강력한 후보 2명이 이렇게 모두 민주당계 정당을 떠나자, 그 기회를 노린 후보들이 쏟아져 나온다. 2016년의 승리자는 국민의당의 이용호.
+
+그리고 2020년, 이번에는 현역 이용호가 무소속으로 출마하며, 이강래는 `한국도로공사 사장(그가 사장으로 재임하던 시절 한국도로공사에서 일어난 사건이 있다. 3권 ‘위원회와 주요 이슈 (1)’, p.XXX 참고.)`을 역임하다가 다시 남원-임실-순창으로 복귀, 더불어민주당으로 출마한다. 강동원은 불출마를 선언한다. 
 
 #### 전남 목포시
+**후보들에겐 슬픈 전설이 있어 (2)**
 
-#### 전북 전주시 을, 전남 순천시
+2016년 총선에서 가장 많은 후보(8명)가 출마한 두 번째 지역구는 목포다. 강력한 현역 의원(2012년 총선 득표율 71.1%)이었던 박지원이 비리 혐의로 재판을 받으면서 피선거권 박탈 가능성이 보이자, 다른 정당에서 후보가 몰린 것이다. 그러나 총선 직전인 2016년 2월 대법원이 박지원의 무죄를 선고했고, 국민의당(전라권 민주당계 제3정당)으로 출마했다. 선거운동의 관성을 이기지 못한 다른 정당들 및 국민의당 경선을 준비하던 무소속 후보들이 모두 출마하였다. 8명이 치열한 접전을 벌이기는 커녕, 박지원은 국민의당 지역구 후보 중 최다득표율로 무난하게 당선된다. 
+
+다만 목포가 다른 후보들에게 슬픈 전설만 남긴 것은 아니었다. 정의당(사민주의 정당)이 목포의 비례대표 정당투표에서 상당한 선전을 거둔 것이다. 전라권에서 유일하게 득표율이 10%를 넘었고, 사민주의 정당이 지역구 당선자를 배출한 적 있는 지역구(울산 북구, 경남 창원시 성산구)를 제외한 비-수도권 지역 중에서 가장 많은 득표율을 기록했다. 
+
+#### 전북 전주시 을, 전남 순천시-광양시-곡성군-구례군 갑
+**오늘의 관광코스: 새누리당의 유적지**
+
+새누리당(보수주류 정당)이 200석도 차지할 수 있다고들 예상했던 2016년 총선(실제 122석)에서, 새누리당은 전라권에서 만큼은 지역구를 2석이나 확보하는 큰 성과를 거뒀다. 그 이후의 정치지형 급변으로 인해, 당시 승리 지역구인 전주 을과 `순천-광양-곡성-구례 갑(2016년 당시 "순천시" 지역구. 인구변동으로 인해 2020년 총선에서는 해룡면을 제외한 순천시 일원을 '갑', 해룡면을 광양-곡성-구례와 합쳐서 '을' 지역구로 개편된다.)`은 현역 의원(정운천, 이정현)이 모두 해당 지역에서 불출마한다. 여러가지 이유가 있겠지만, 재선의 가능성이 낮다는 것이 가장 큰 문제였을 것이다. 
+
+이 빈자리의 표심이 어떻게 이동할 것인지는 중요하다. 2016년 당시를 기준으로 보자면, 새누리당을 향한 표심은 우파적 성향이라기보다는, "더불어민주당 후보를 떨어뜨릴 수 있는 후보"에게 향한 표심이었다고 보아야 할 것 같다. 전북/전남에서 더불어민주당 후보들이 대체로 35~45%의 득표율을 올렸던 경향은 해당 지역구에서도 유사하게 이뤄졌지만, 전북/전남에서 국민의당 후보들이 대체로 얻었던 득표율(40~50%)과 비교할 때 해당 지역구 국민의당 후보의 득표율은 턱없이 적다. 
 
 
 ## 제주특별자치도
@@ -119,9 +150,18 @@
 
 한편 제주도의 유권자는 중앙정치가 다당제로 개편되는 과정과 맞물려서, 사민주의 정당과 녹색당에 새로운 기회를 주고 있다. 중앙정부에서 지속적으로 추진하는 제주도 내 개발사업과 관광진흥사업에 대해, 사회경제적 불평등과 자연환경 파괴를 일으킨다는 피로감을 진하게 느끼기 때문으로 보인다. 2018년 지방선거의 제주도의회 비례대표 정당투표에서, 노동당(득표율 1.83%)과 녹색당(4.87%)은 각각 전국 시·도의회 선거 중 최다득표율을, 정의당(11.70%)은 전라북도, 광주광역시 다음으로 전국에서 가장 높은 득표율을 기록했다. 특히 같은 날의 제주도지사 선거에서 녹색당(고은영)은 득표율 3.53%로 2개의 보수정당(자유한국당, 바른미래당) 후보를 모두 제치고 3위를 차지하는 파란을 일으키기도 했다. 보수정당 출신의 현임 도지사(원희룡)가 무소속으로 출마한 이유도 크지만, 그럼에도 불구하고 제주도가 보여주는 진보정당에 대한 개방성은 주목할 만 하다. 
 
+<!--
 #### 제주 제주시 갑
+**더불어민주당 불패의 
+민주당계 정당이 제주도를 석권하는 문을 열어젖힌 4선의 강창일이 불출마한다. 더불어민주당 입장에서, 제주시 을과 서귀포시 지역구는 2016년에 3선 국회의원(김우남, 김재윤)에서 세대교체에 성공하여 새로운 초선 국회의원(오영훈, 위성곤)으로 이어가는 데 성공했다. 더불어민주당이 만약 이번에도 제주시 갑에서 승리한다면, 
+-->
 
-#### 제주 서귀포시 (서귀포 국제공항)
+#### 제주 서귀포시 
+**제주 제2공항**
+
+각 지역구마다 선거를 뒤흔들 지역이슈가 여러가지 있겠지만, 아무래도 서귀포의 제주 제2공항만큼 중앙정치와 지역정치를 모두 뒤흔들 이슈를 찾기는 어렵다. 제주국제공항이 포화상태라는 진단이 나오면서, 중앙정부와 제주특별자치도가 2010년대 중반부터 서귀포 동부에 신공항 건설을 추진했다. 문제는 제주도 주민들의 반대가 매우 크다는 것이다. 반대의 이유는 복합적이다. 오름을 깎는 등의 자연환경 파괴 문제, 토지수용 보상 미흡 문제 뿐만 아니라, 제주도의 관광산업이 지금보다 더 활성화되면 물가, 부동산 가격 등이 폭등하여 제주도 주민에게 경제적 타격이 간다는 주장까지 힘을 얻었기 때문이다. 
+
+자연환경 문제와 사회경제적 문제가 더해져서 큰 논쟁이 붙은 상황에서, 해당 지역구 국회의원의 역할이 매우 중요하다. 국제공항 건설과 같은 대형 토건사업은 반드시 중앙정부(국토교통부)가 직접 관리감독하고 예산을 투입하기 때문에, 국회의원은 예산안 심의와 국정감사를 통해 공사를 촉진할 수도, 방해할 수도 있다. 2020년 총선의 서귀포 지역구는 제주도의 앞날을 결정하는 중요한 선거가 될 것이다. 
 
 
 ## 경북권
@@ -149,7 +189,7 @@
 
 다만 2000년대까지만 해도 보수주류 정당과 대항하는 두 명의 중요 정치인이 있었다. 한 명은 포항제철(현 POSCO) 설립기의 회장을 역임한 `박태준(포항시 북구: 1997~ 2000)`이고, 또 한 명은 노태우와 김대중 행정부에서 각각 청와대 비서관으로 일한 `김중권(영덕군-청송군-울진군: 1981~ 92)`이다. 두 인물 모두 보수주류 정당을 통해 군사정권에 직간접적으로 참여했지만, 경북권으로 세력을 넓히려던 김대중이 그 경력을 이용하고자 이들과 손을 잡기도 하였다. 두 사람 모두 1997년 대선에서 김대중을 지지했고, 박태준은 민주당계 정당과 공동정권을 꾸린 제3지대 정당(자유민주연합)에 입당했으며, 김중권은 민주당계 정당(새천년민주당)에 입당하여 2000년 총선에서 봉화군-울진군 선거구에서 불과 19표(득표율 0.04%p) 차이로 낙선하는 대선전을 거둔다. 이 시절의 향기가 남아있는 경상북도는 한 때, 민주당계 정당에 있어서 승부를 걸어보기에 대구보다도 더 좋은 지역으로 통했다. 
 
-가장 최근 선거인 2016년 총선과 2018년 지방선거에서, 이 ‘향기’가 대구 인근 지역과 구미에서 다시 피어오르기 시작했다. 이 내용은 ‘주목할 지역’ 내용에서 설명하도록 하겠다. 
+가장 최근 선거인 2016년 총선과 2018년 지방선거에서, 2000년대의 ‘향기’가 대구 인근 지역과 구미에서 다시 피어오르기 시작했다. 이 내용은 ‘주목할 지역’ 내용에서 설명하도록 하겠다. 
 
 
 - - -
@@ -157,12 +197,38 @@
 ### 주목할 지역
 
 #### 대구 북구 을, 동구 을
+**(무소속)후보들에겐 슬픈 전설이 있어 (3)**
+
+한때 섬유/가발/의류 제조업의 세계적 중심지였으나 이 분야에서 중국 및 동남아시아가 급부상하면서 침체되어버린 역사를 가진 대구. 대구시와 중앙정부는 새로운 제조업을 만들어내기 위해 30여 년간 굉장한 노력을 들였는데, 이를 통해 안경산업, 기계부품산업 등이 새로이 자리잡을 수 있었다. 그 혜택을 가장 많이 본 곳이, 시 외곽의 산업단지가 자리잡은 북구 을과 동구 을 지역구다. 
+
+이 두 지역구는 2016년 총선에서 새누리당(보수주류 정당) 패배의 상징이 되어버렸다. 이 곳에서 당선된 두 명의 무소속 후보 - 홍의락, 유승민 - 은 전혀 다른 과정을 통해 당선되었다. 2012년 민주당계 정당(민주통합당) 비례대표로 당선되었던 홍의락은 입법실적 미비를 이유로 더불어민주당에서 공천배제 당하자 무소속으로 출마했고, 더불어민주당은 후보를 내지 않으면서 사실상 지원하여 과반득표 당선을 이끌었다. 반대로 보수주류 정당(새누리당) 출신의 유승민은 박근혜 행정부를 비판하다가 원내대표에서 사퇴한 이후, 당에서 시간을 질질 끌면서 공천결과를 발표하지 않자, 무소속 후보등록을 위한 탈당 시한 1시간을 남기고 탈당했다. 2016년 총선에서 새누리당은 불과 1석 차이로 정당의석수 2위로 밀려났다. 
+
 
 #### 경북 포항시 북구
+**“경상북도 종로구”**
+
+경상북도 안에서도 서울의 종로구(5권 ‘중부지방 권역’, p.XXX 참고)와 같이 거물급만 출마하는 곳이 있으니, 포항 북구다. 전두환 보안사령관의 비서실장이자 전두환 행정부의 대통령비서실 비서실보좌관으로 `"실세 쓰리허"(허삼수 대통령비서실 사정수석비서관, 허문도 대통령비서실 공보비서관을 합하여, 전두환 행정부의 실세 3인을 가리킨 표현. 세 명 모두 전두환의 쿠데타 당시 전두환의 비서실장 또는 국군기무사 인사처장을 맡고 있었다.)`라고 불리운 허화평(1992~ 97), 포항제철 회장 박태준(97~ 2000), 국회부의장을 지낸 이병석(2000~ 16)이 포항 북구에서 국회의원을 지냈다. 
+
+특이하게도, 민주당계 정당과 사민주의 정당에서도 2008년 총선부터는 언제나 `경북도당위원장(한국의 정당은 <정당법>에 의해, 각 시·도별 지부인 광역시·도당을 설치하고 그 대표인 위원장을 둔다)`이 포항 북구에 출마했다. 오중기(2008/16 출마), 유성찬(2012 출마), 박창호(2016 출마) 세 명은 총선 당시 각 정당의 경북도당위원장 또는 부위원장을 맡고 있었고, 세 명 모두 도당위원장을 맡은 상태에서 경북도지사 선거에 출마한 이력도 가지고 있다. 2020년 총선에서 정의당(사민주의 정당)은 역사상 최초로 지역구 국회의원후보 경선을 치르게 되었는데, 그 지역구 역시 포항 북구였다. 
 
 #### 경북 구미시 갑/을
+**2000년대의 향기 (1)** 
 
-#### 경북 경산시, 경북 고령군-성주군-칠곡군
+구미는 한국 노동운동계의 최종보스와 같은 곳이었다. 수천 개의 회사로 이루어진 국제적인 전자산업 제조공장단지가 있는데, 정작 이들 제조업 노동자를 조직화하는 작업이 너무나 어려웠기 때문이다. 경남권의 각종 중공업 단지에서 1980~ 90년대에 이뤄진 빠른 조직화와 대비되었다. 이는 투표 성향으로도 나타나서, 구미에서의 민주당계 및 사민주의 정당의 득표율은 울산, 창원, 거제와 비교해서 초라하게 낮았다.
+
+그러나 2016년 총선부터 새로운 흐름이 나타났다. 구미 갑 선거구에서 민주-진보 단일후보인 민족주의 좌파정당 후보(남수정, 민중연합당)가 38%의 고득표율을 기록하고, 보수주류 정당(새누리당)의 구미시 비례대표 정당득표율은 경북 평균보다 8%p나 낮아서 과반에 턱걸이했다. 민중연합당이 전라권을 제외하고 정당득표율이 가장 높았던 곳도 구미였다. 
+
+그리고 2018년 지방선거에서 대격변이 일어난다. 구미의 유권자들은 경북권 최초의 민주당계 정당 출신 시장(장세용, 더불어민주당)을 당선시켰고, 경북도의회 비례대표 선거에서도 더불어민주당(득표율 43.10%)에게 보수주류 정당(자유한국당, 41.05%)보다 많은 표를 주었으며, 경북도의회 지역구 선거에서는 더불어민주당 3석, 자유한국당 2석으로 다수당을 바꾸었다. 
+
+
+#### 경북 경산시, 고령군-성주군-칠곡군
+**2000년대의 향기 (2)**
+
+경산과 고령-성주-칠곡의 사정은 구미와 조금 다르다. 경산과 칠곡은 대구의 팽창과 함께 위성도시로 발전하기 시작하고, 1990년대부터 대구에서 이전해 온 공장들이 산업단지를 이루고 있다. 대구 북구, 동구, 수성구와 맞닿아 사실상 대구와 한 권역을 이루게 되면서, 이들 지역과 함께 반-보수주류 정당 스탠스가 자리잡기 시작했다. 2016년 총선에서 사민주의 정당(정의당)과 민주당계 정당(더불어민주당)이 보수주류 정당(새누리당)과의 1:1 구도에서 각각 30%대의 득표율을 올리는 데 성공한다. 정의당의 배윤주 후보는 심상정(경기 고양시 갑), 노회찬(경남 창원시 성산구)에 이은 지역구 최다득표율을 기록했다.
+
+이 경향에 불을 붙인 것이 2016년 후반기에 `주한미군의 THAAD(종말 고고도 지역방어체계. 탁하하는 탄도미사일을 향해 미사일을 발사하여 높은 고도에서 요격하는 무기체계. 한국에서는 THAAD 설치지역 인근 주민의 건강문제, 무기의 실효성 문제 등으로 배치 반대 운동이 벌어졌다.)`가 성주군에 설치된 것을 반대하는 운동이 벌어진 것이다. 당장의 지지율 변화가 크지는 않았지만, THAAD 반대 대책위원회가 더불어민주당과 연합하여 지역조직을 만든 것이 큰 변화였다. 2018년 지방선거에서, 고령/성주/칠곡의 3군의 더불어민주당은 1995년 이후 23년 만에 처음으로 2개 군에서 군수 후보가 등장하여(!) 출마할 수 있었다.
+
+
 
 ## 경남권
 **경남권의 선거결과는 단순한 의석수 이상의 의미가 있다. (선거를 통한) 한국 사회와 정치지형의 변화는 보통 경남권에서 시작되었다.**
@@ -220,14 +286,22 @@
 #### 부산 중구-영도구, 금정구
 
 #### 부산 부산진구 갑
+부산진 갑 선거구의 
 
-#### 부산 연제구 (더민주로 보내?)
+<!--#### 부산 연제구 (더민주로 보내?)-->
 
-#### 부산 사상구
+<!--#### 부산 사상구-->
 
 #### 울산 울주군
+**불사조 꼬리의 불이 새로 켜진 후**
 
-#### 경남 창원시 성산구
+대선후보까지 한 적 있는 이인제가 워낙 유명해서 그렇지, 사실 불사조는 죽지 않았다. 논산-계룡-금산에서 죽은 불사조의 재를 울주로 옮겨놓았더니, 그 잿더미 속에서 새로 부활하였다. 
+
+그 주인공인 강길부를 살펴보자. 2004년 민주당계 정당(열린우리당)으로 초선, 2008년 보수주류 정당(한나라당)에 입당했다가 공천탈락 후 무소속으로 출마해 재선. 한나라당 복당 후 2012년 3선. 2016년 공천탈락 후 무소속으로 출마해 4선. 다시 새누리당에 복당하였으나 박근혜 대통령 탄핵과 바른정당(탄핵 찬성파) 분당 시점에 바른정당 합류. 2017년 다시 보수주류 정당(자유한국당)으로 이동했다가 홍준표(당시 당대표)를 비판하며 2018년 탈당. 2020년 3월 8일 현재 무소속. 
+
+문제는 그가 3월 8일 현재까지도 예비후보 등록을 하지 않았다는 점. 2020년에 출마를 하든 불출마를 하든, 울주군의 선거는 격변을 겪을 것이다. 출마를 하지 않는다면 후보들이 그의 지지를 받아 지역조직과 지지세를 등에 업기 위해 갖은 애를 쓸 것이다. 출마한다면… 목포 선거구(p. XXX)를 읽어보자.
+
+<!--#### 경남 창원시 성산구-->
 
 #### 경남 창원시 마산회원구, 양산시 을
 
