--- a/03_위원회와 주요 이슈(1).md
+++ b/03_위원회와 주요 이슈(1).md
@@ -174,7 +174,7 @@
 이 의견에 동의하든 동의하지 않든, 금태섭은 (특히 더불어민주당 지지자에게는) 매우 주목해야 할 정치인이 되었다. 금태섭의 당내 입지가 곧 ‘더불어민주당이 당내 이견을 포용하느냐 마느냐’를 확인하는 증거처럼 여겨지게 되었기 때문이다.
 
 #### 광주 광산구 을
-**국민의당-무소속 권은희**
+**국민의당 권은희(불출마)**
 변호사 출신이고, 경찰관으로 특채되었으며, 그 경찰 시절 `국가정보원의 여론조작 개입(이명박 행정부의 국가정보원이 2012년 대통령 선거 당시 인력과 예산을 동원해 각 포털사이트에 조직적으로 댓글을 작성해 여론조작을 꾀한 사건. 차후 수사를 통해 국군사이버사령부, 국군기무사령부 등도 개입한 범정부적 범죄행위로 밝혀진다.)` 여부를 수사하다가 외압을 받고 사직한 경력까지. 권은희의 경력은 사법 및 수사 분야와 관련하여 가장 폭넓은 다양성을 갖춘 인물이다. 이 장점은 관련 분야 사안이 중앙정치의 쟁점으로 떠오를 때 매우 잘 쓰일 수 있다. 
 사개특위 소속이었던 그는, 2019년 4월 백혜련 의원의 공수처 설치법안이 발의된 직후, 공수처의 기소 권한을 다소 제한하는 장치(기소심의위원회)를 추가한 공수처 설치법안을 별도 발의했다. 이 내용 자체는 12월에 부결되었지만, 공수처 설치 자체에 반대하던 의원들 일부도 권은희 발의안을 이용한 협상의 여지를 인정하고, 그제서야 공수처 설치법안은 신속처리안건으로 지정될 수 있었다. 
 
@@ -259,17 +259,18 @@
 #### 경기 고양시 갑
 **정의당 심상정**
 
-정당이 행정부에서 가장 힘이 센 국무총리나 기획재정부 장관을 국회에서 다룰 때에는, 그에 걸맞는 중량감있는 인물을 내세워야 한다. 특히 그 정당이 의석수가 적어서 대외적으로 ‘만만하게 보일’ 위험이 크다면, 중량감을 갖춘 인물이 전문성을 갖춘 보좌진의 도움을 받아서 강력한 화력을 발휘해야 한다. 
+어떤 정당이 행정부에서 힘이 가장 센 국무총리나 기획재정부 장관을 국회에서 다룰 때에는, 그에 걸맞는 중량감있는 인물을 내세워야 한다. 특히 그 정당이 의석수가 적어서 대외적으로 ‘만만하게 보일’ 위험이 크다면, 중량감을 갖춘 의원이 전문성을 갖춘 보좌진의 도움을 받아서 강력한 화력을 발휘해야 한다. 
 
-2016-2020 국회에서, 정의당은 당대표 심상정이 그 역할을 맡았다. 상반기에 정무위, 하반기에 기재위에 소속되었던 심상정은 
+2016-2020 국회에서, 정의당에서는 당대표 심상정이 그 역할을 맡았다. 상반기에 정무위, 하반기에 기재위에 소속되었던 심상정은 행정부의 경직성이 초래할 수 있는 구조적인 문제를 자주 건드렸다. 대표적으로, 기획재정부가 행정부 각 부처 및 공공기관마다 임금 총액 한도를 설정하는 '총액인건비제'가 공공부문 비정규직의 정규직 전환 과정에서 인력감축과 해고를 일으킨다는 구조적인 문제를 국정감사에서 제기한 바 있다. 
 
 #### 대구 수성구 을
 **더불어민주당 김부겸**
 
 김부겸은 2016-2020 국회에서 행안위와 가장 많이 접촉한 의원이다. 김부겸이 이번 국회 행안위에 소속된 적은 없지만, 그는 문재인 행정부의 초대 행정안전부 장관(2017~ 19)이었다. 행안부 장관으로서는 지방자치가 시행된 이후(1995) 역대 3번째로 재임기간이 길고, 공화국의 탄생 이래(1948) 대통령이 취임 직후 임명한 행안부 장관 중에서는 재임기간이 가장 길다. 정권의 힘이 가장 강한 초기에 이만큼 오래 재임했다는 것은, 역대 장관 중에서 중앙정부 및 지방자치에 대한 틀을 만드는 데 가장 깊게 관여했다는 뜻이기도 하다. 김부겸이 가진 무게감(4선 국회의원이자, 민주당계 정당 최초의 대구 지역구 의원)까지 결합되어 독자적인 영향력도 강했을 것이다. 그의 당선 여부는 향후 국회와 정계에도 영향을 발휘해서, 김부겸이 설계한 지방분권 체제가 얼마나 잘 유지될 것인지를 결정할 것이다. 
 
+<!--
 #### 경남 사천시-남해군-하동군
 **더불어민주당 제윤경(비례대표, 불출마)**
-
-
+일반적으로 '금융 전문가'라고 하면 은행장 정도 되는 은행인이나 금융 담당 공무원, 재무/경제 관련 학자 등이 먼저 떠오른다. 그러나 그런 인물은 행정부나 의회에 워낙 많이 들어가다보니, 오히려 `미시경제(개인, 소규모 기업, 가정 단위에서 일어나는 경제문제. 이와 반대로 국가 또는 전세계 단위의 경제문제는 '거시경제'라고 부른다.)` 측면에서 금융정책을 제안하고 추진하는 것이 필요성에 비해 많이 무시된다. 그 지점에서 제윤경은 인상적인 입법활동을 했다. 국회의원이 되기 전, 그는 사업가이자 시민활동가로서 개인경제교육, 부채상담, 수입이 없어서 장기연체된 개인 부실채권을 헐값에 사들여 소각하는 활동 등을 했다. 
+-->
 
