--- a/04_위원회와 주요 이슈(2).md
+++ b/04_위원회와 주요 이슈(2).md
@@ -213,7 +213,7 @@
 
 언젠가부터 기성 정당에서는 여성 이공계열 종사자를 비례대표 1번으로 공천하는 풍습이 자리잡았다. 수학교육학 교수였던 박경미, 한국표준과학연구원장을 역임한 신용현은 2016년 총선에서 각각 더불어민주당, 국민의당의 비례대표 순번 1번으로 당선되었다. 각 정당은 이공계를 중시한다는 상징으로 이들을 선거기간동안 내세우기도 했으며, 이들 국회의원 역시 (상임위원회를 2년 간격으로 바꾸는 보통의 경우와 달리) 각각 교문위와 과방위에서 4년을 꼬박 활동하였다. 
 
-이들은 2020년에 자신의 직업군과 일치하는 ‘험지’로 출마할 것으로 보인다. 두 인물은 2018년부터 더불어민주당 서초(을), 바른미래당 유성(을) 지역위원장을 역임했다. 수학 (사)교육에 관심이 많은 지역과 자연과학 연구자가 많은 지역을 타겟으로 잡은 듯 보인다. 서초구 을에서 민주당계 정당이 당선된 것은 1988년이 마지막(김덕룡, 통일민주당)이었고, 유성구가 설치된 1988년 이후 보수주류 정당은 유성구에서 승리한 적이 없다. 
+이들은 2020년에 자신의 직업군과 일치하는 ‘험지’로 출마할 것으로 보인다. 두 인물은 2018년부터 더불어민주당 서초(을), 바른미래당 유성(을) 지역위원장을 역임했다. 수학 교육(정확히는 사교육)에 관심이 많은 지역과, 자연과학 연구자가 많은 지역을 타겟으로 잡은 듯 보인다. 서초구 을에서 민주당계 정당이 당선된 것은 1988년이 마지막(김덕룡, 통일민주당)이었고, 유성구가 설치된 1988년 이후 보수주류 정당은 유성구에서 승리한 적이 없다. 
 
 
 #### 경기 고양시 병, 충북 청주시 흥덕구
@@ -236,27 +236,31 @@
 
 
 
-## 산업, 통상, 환경, 에너지, 사회간접자본 관련
+## 산업, 통상, 환경, 에너지, 인프라 관련
 **인간의 풍요로운 삶을 지탱하는 요소들은 대게 일상에서 눈에 띄지 않는 곳에 존재한다. 
 
 ### 과학기술정보방송통신위원회(과기정통위) #2
-
+과기정통위가 담당하는 중요 국가기반시설 중에서는, 우체국(우정사업본부)와 방송망, 정보통신망 시설이 있다. 우체국이 편지와 소포 등 실물로 된 정보를 주고받는 데에 가장 안정적이고 모두가 이용할 수 있는 시설(코로나19 확산기의 도시 및 농촌지역 마스크 공급을 통해 그 효과를 입증한 바 있다)이라면, 정보통신망은 모두가 
 
 ### 농림축산식품해양수산위원회(농축수위)
-사람들이 자주 잊곤 하지만, 농림, 축산, 수산업도 매우 거대하고 중요한 ‘산업’이다. 식량과 관련하여, 
+사람들이 자주 잊곤 하지만, 농축수위가 담당하는 농림, 축산, 수산업도 인류문명을 떠받치는 아주 거대하고 중요한 ‘산업’이다. 도시에 사람이 살기 위해서는 도시 저 멀리에서 안전한 농수축산물이 안정적으로 공급되어야 하고, 도시 바깥의 마을은 농수축산업 없이는 경제활동이 불가능해서 사람이 살 수 없다. 한국의 행정력이 닿는 실질적인 영토를 "한반도 및 그 부속도서 내의 점처럼 남아있는 몇몇 큰 도시들"로 축소하고 싶지 않다면, 농수축산업을 "사양산업"이나 "경쟁력이 없는 산업"이라고 간단하게 퉁치고 넘어갈 수는 없다. 생산자를 보호하고 산업을 육성하며, 그 생산품이 가급적 안전하게, 그리고 가능하면 동물의 일생을 너무 가혹하게 쥐어짜지 않으며 생산하고 유통할 수 있도록 관리해야 한다. 
+
+농수축위가 담당하지만 대도시 사람들의 눈에 잘 띄지 않는 다른 분야는, 해양수산부가 담당하는 해운, 항만, 해양안전, 해상치안과 오염방제, 해양과학 및 기술 연구다. 한국은 휴전선의 봉쇄로 인해 실질적인 섬나라이고, 동시에 실제로 사람이 사는 섬이 어마어마하게 많다. 수출입 물자수송과 사람의 이동을 비롯해서, 행정부의 해양 관리에 따라 일상생활에 직접적인 영향을 받는 인구가 상당히 많다. 
+
 
 ### 산업통상자원중소벤처기업위원회(산통자위)
 이 긴 이름의 위원회가 소관하는 중앙정부 부처는 산업통상자원부와 중소벤쳐기업부이다. 산업통상자원부는 사업규제, 기술특허 등 상업·서비스업·공업·광업 전반의 육성에 관한 정책, 에너지·자원 관련정책, 무역·통상 관련정책을 총괄한다. 다만 그 중에서도 중소기업 육성, 지원, 벤처기업 창업과 관련된 부분은 중소벤처기업부가 맡고 있다. 
 산업구조가 변화하고 (기후변화가 겹쳐서) 에너지 생산구조가 변화해야 하는 
 
-### 환경노동위원회(환노위) #3
-산업과 
-
 
 ### 국토교통위원회(국토위)
-국토교통위원회가 다루는 사항은 주택, 신도시 등 국토의 이용관리와 건설관련 규제, 그리고 도로, 철도, 공항 등 육상/항공 교통시설 관리업무이다. 
+국토교통위원회는 국토교통부 소관 업무를 다룬다. 주택, 신도시 등 국토의 이용관리와 건설관련 규제, 그리고 도로, 철도, 공항 등 육상/항공 교통시설 관리업무가 여기에 들어간다. 이재에 밝은 사람들은 곧바로 두 가지 키워드를 찾아낼 것이다. 부동산, 그리고 
 
 많은 지역구 국회의원들이 국토위에 배정되기를 선호한다. 지역구 내 개발사업, 특히 교통시설을 유치하는 데에 유리하기 때문이다. 
+
+
+### 환경노동위원회(환노위) #3
+산업과 
 
 
 - - -
