--- a/05_중부지방 권역.md
+++ b/05_중부지방 권역.md
@@ -58,7 +58,7 @@
 공화국이 탄생한 이래 종로는 언제나 ‘정치 1번지’로 불렸다. 청와대와 광화문광장이 위치했고, 중앙선관위의 행정절차상 지역구 순번에서 언제나 첫 번째에 위치했기 때문이기도 하지만, 무엇보다도 거물급 인사가 많이 출마하는 최고의 전장이라는 점이 있다. 이 곳에서 국회의원을 역임한 ‘주요’ 인사만 살펴보자. 3명의 대통령(윤보선: 1954~ 60, 이명박: 1996~ 98, 노무현: 1998~ 2000), 1명의 국회의장(정세균: 2012~ 20), 1명의 부통령(장면: 1948~ 50)과 2명의 국무총리(장면, 정세균), 2명의 서울시장(윤보선, 이명박). 여기에 <대한민국헌법> 초안 작성자(유진오: 1967~ 71), 한국 최초의 여성 제1야당 대표이자 여성 최다선 의원(박순천: 1950~ 54)이 종로구를 거쳐갔다. 가장 ‘무서운’ 라인업을 보여준 1996년의 후보(이명박, 이종찬, 노무현, 김을동 등) 4명의 일생을 합하면 대통령 10년과 국회의원 35년이 된다.
 그 외 주요 당선/낙선자 명단에 김두한, 조경철, 제정구, 유인태, 김홍신, 손학규, 홍사덕, 오세훈, 하승수 등. 각종 정당의 정계 거물과 유명인이 포진해있다. 사회운동의 측면에서도, 한국 최초의 커밍아웃 성소수자 국회의원 후보가 출마한(최현숙, 진보신당, 2008) 역사적 상징성도 있다. 이런 상징성 때문에라도 각 정당에서는 경쟁적으로 거물 인사를 종로구에 출마시킨다. 이것만으로도 종로를 주목할 이유는 충분하지 아니한가.
 
-#### 서울 용산구
+#### 서울 용산구 (지역구, 비례)
 **진영 바꾼 진영이 어떤 진영에서도 안 나온다**
 
 2016년 총선에서 일어난 가장 큰 격변은, 박근혜 행정부 초대 보건복지부 장관이었으나 사실상 경질당했던 3선 의원 진영이, 새누리당을 탈당하고 더불어민주당에 입당하여 4선에 성공한 것이었다. 이 한 방으로 용산은 물론이고, 박근혜 대통령을 평가하는 구도였던 전국의 선거판이 크게 흔들렸다. 행정안전부 장관이 된 진영은 2020년 선거에 출마할 수 없기 때문에, 용산은 이제 완전히 새로운 후보군을 맞이할 것이다. 
@@ -71,8 +71,12 @@
 2018년 보궐선거에서 당선된 현역 의원은 지역구 역사상 가장 덜 유명한(?) 인물, 전직 재선 노원구청장(2010~ 18) 김성환이다. 그가 이번에 다시 출마한다면, 노원구 병은 총선에서 최초로 전국적인 이슈 뿐만 아니라 동네 특화 이슈를 바탕으로 선거를 치르게 될 수도 있다. 이 경우에도 민주당계 정당이 승리할 수 있을지 지켜볼 만 하다. 행정구역상 “상계동”이라고 일컬어지는 노원구 병은, 한강이북에서 보기 드물게 대단지 주공아파트와 학원가가 밀집하여 동네 특화 이슈가 등장하기 좋다.
 -->
 
-#### 서울 마포구 을
-**
+#### 서울 은평구, 마포구 (비례)
+**사민주의 정당의 천하3.5분지계**
+
+서울에서 2016년 총선의 비례대표 정당투표는 국민의당(민주당계 전라권 제3정당)의 등장으로, 새누리당(보수주류 정당), 더불어민주당(민주당계 정당), 국민의당이 모두 각 구별로 25~30% 내외의 고른 득표율을 얻는 천하삼분지계가 실현되었다. 그 중에서도 가장 균형잡힌(?) 솥발의 형세를 취한 곳은 은평구와 마포구다. 서울에서 정당투표 1~3위 사이의 차이가 가장 적은 두 곳으로, 1.5%p를 넘지 않았다. 
+이와 함께 살펴봐야 할 중요한 제4의 솥발은 사민주의 정당이다. 은평과 마포는 2016년 총선에서 사민주의 정당이 가장 큰 성과를 거둔 서울의 자치구다. 정의당은 가장 높은 비례대표 정당득표율을 기록했고, 노동당도 서울 평균 득표율의 2배를 기록했다. 서울에서 진보정당 지역구 후보가 가장 높은 득표율을 기록한 곳도 은평구 갑(노동당 최승현: 4.18%)과 마포구 을(정의당 배준호: 3.96%)이었다. 선거구도를 유달리 예측하기 어려운 2020년 총선에서, 사민주의 정당은 예상 외의 성과를 낼 수도 있다. 
+
 
 <!--
 #### 서울 강서구 을, 구로구 을
