--- a/06_남부지방 권역.md
+++ b/06_남부지방 권역.md
@@ -45,7 +45,7 @@
 
 ### 주목할 지역
 
-#### 대전 유성구 (갑/을)
+#### 대전 유성구 (비례)
 **“젊은 고학력 연구직”**
 
 대덕연구단지(대덕구가 아닌 유성구에 있다), 충남대학교와 한국과학기술원(KAIST)이 위치한 이유로, 유성구에는 “젊은 고학력 자연과학 및 공학기술 연구직” 유권자가 많다. 이 인구구성은 충청권에서 민주당계 및 사민주의 정당에게 가장 친화적인 표심으로 발현된다. 2016년 총선의 비례대표 정당투표 득표율로 보자면, 유성구는 충청권에서 유일하게 정의당이 10%를 넘게 득표한 곳이자, 충청권에서 유일하게 더불어민주당과 국민의당이 모두 새누리당(보수주류 정당)보다 많이 득표한 곳이었다. 
@@ -124,7 +124,7 @@
 
 그리고 2020년, 이번에는 현역 이용호가 무소속으로 출마하며, 이강래는 `한국도로공사 사장(그가 사장으로 재임하던 시절 한국도로공사에서 일어난 사건이 있다. 3권 ‘위원회와 주요 이슈 (1)’, p.XXX 참고.)`을 역임하다가 다시 남원-임실-순창으로 복귀, 더불어민주당으로 출마한다. 강동원은 불출마를 선언한다. 
 
-#### 전남 목포시
+#### 전남 목포시 (지역구, 비례)
 **후보들에겐 슬픈 전설이 있어 (2)**
 
 2016년 총선에서 가장 많은 후보(8명)가 출마한 두 번째 지역구는 목포다. 강력한 현역 의원(2012년 총선 득표율 71.1%)이었던 박지원이 비리 혐의로 재판을 받으면서 피선거권 박탈 가능성이 보이자, 다른 정당에서 후보가 몰린 것이다. 그러나 총선 직전인 2016년 2월 대법원이 박지원의 무죄를 선고했고, 국민의당(전라권 민주당계 제3정당)으로 출마했다. 선거운동의 관성을 이기지 못한 다른 정당들 및 국민의당 경선을 준비하던 무소속 후보들이 모두 출마하였다. 8명이 치열한 접전을 벌이기는 커녕, 박지원은 국민의당 지역구 후보 중 최다득표율로 무난하게 당선된다. 
@@ -211,7 +211,7 @@
 
 특이하게도, 민주당계 정당과 사민주의 정당에서도 2008년 총선부터는 언제나 `경북도당위원장(한국의 정당은 <정당법>에 의해, 각 시·도별 지부인 광역시·도당을 설치하고 그 대표인 위원장을 둔다)`이 포항 북구에 출마했다. 오중기(2008/16 출마), 유성찬(2012 출마), 박창호(2016 출마) 세 명은 총선 당시 각 정당의 경북도당위원장 또는 부위원장을 맡고 있었고, 세 명 모두 도당위원장을 맡은 상태에서 경북도지사 선거에 출마한 이력도 가지고 있다. 2020년 총선에서 정의당(사민주의 정당)은 역사상 최초로 지역구 국회의원후보 경선을 치르게 되었는데, 그 지역구 역시 포항 북구였다. 
 
-#### 경북 구미시 갑/을
+#### 경북 구미시 갑 (지역구, 비례)
 **2000년대의 향기 (1)** 
 
 구미는 한국 노동운동계의 최종보스와 같은 곳이었다. 수천 개의 회사로 이루어진 국제적인 전자산업 제조공장단지가 있는데, 정작 이들 제조업 노동자를 조직화하는 작업이 너무나 어려웠기 때문이다. 경남권의 각종 중공업 단지에서 1980~ 90년대에 이뤄진 빠른 조직화와 대비되었다. 이는 투표 성향으로도 나타나서, 구미에서의 민주당계 및 사민주의 정당의 득표율은 울산, 창원, 거제와 비교해서 초라하게 낮았다.
@@ -284,9 +284,18 @@
 ### 주목할 지역
 
 #### 부산 중구-영도구, 금정구
+**중진이 빠졌다 (3)**
+
+김무성과 김세연이 모두 부산의 보수주류 정당 중진이지만, 그 성격이 많이 다르다. 김무성(남구: 1996~ 2012, 중구-영도구: 13~ 20)은 1980년대 민추협(민주화추진협의회)에서 김영삼의 측근으로 정치에 입문하고, 2007년 대선후보 경선을 앞두고 박근혜의 킹메이커 역할을 자임한 뒤, 당 대표까지 맡은 당내 주류 정치인이었다. 반대로 김세연(금정구: 2008~ 20)은 금정구에 본사를 둔 한국 최초 고무벨트 제조회사(동일고무벨트) 창업주의 손자이고, 그의 아버지 김진재도 동래구-금정구에서 5선(1981~ 85, 88~2004)을 한 바 있다. 
+
+김무성이 전국적 인지도를 바탕으로 지역에서 강건한 입지를 다진 것과 달리, 김세연은 지역구에서 낙선할 가능성이 없었기에 당 지도부를 비판하며 자신의 독자적인 목소리를 중앙정계에 내보낼 수 있는, 독특한 케이스였다. 이렇게 배경이 다른 두 중진 현역 의원이 모두 불출마를 선언했다. 선거 결과와 무관하게, 각자 강한 캐릭터를 가졌던 현역 의원이 빠진 채 진행되는 선거의 진행양상을 비교하며 지켜보는 것은 매우 흥미로운 일이 될 것이다. 
 
 #### 부산 부산진구 갑
-부산진 갑 선거구의 
+**부산 한가운데의 파란 깃발 선봉장**
+
+부산의 한가운데, 부산진 갑 선거구는 더불어민주당 부산시당에게 매우 각별한 상징성을 가진다. 이 지역구의 현역, 김영춘의 독특한 입지 때문이다. 부산 태생으로 민주당계 정당의 총재였던 김영삼의 비서로 들어가서 정치에 입문했고, 김영삼의 3당 합당에 환멸을 느끼며 대학원에 들어갔고, 김영삼의 "호랑이 굴에 들어가서 호랑이를 잡는 싸움을 도와달라"는 말에 다시 보수주류 정당으로 합류했으며, 서울(광진구 갑)에서 국회의원에 당선된 뒤 보수주류 정당의 개혁 가능성이 없다고 판단하고 `동료 의원 4명(이부영(탈당 당시, 서울 강동 갑), 이우재(서울 금천), 안영근(인천 남구 을), 김부겸(경기 군포). 김영춘까지 5인을 "독수리 5형제"라고 불렀다.)`과 민주당계 정당(열린우리당) 입당. 그리고 2012년 부산 출마를 선언하며 부산으로 이주. 2012년 보수주류 정당 후보(나성린, 새누리당)에게 약 4%p 차이로 (부산으로서는) 아깝게 낙선한 뒤, 2016년 같은 상대에게 3%p 차이고 어렵게 승리.
+
+부산에서 태어나 김영삼의 직계로 정치를 배웠고, 서울에서 보수주류 정당을 경험한 후 민주당계 정당으로 합류한 뒤, 다시 부산에서 도전하여 부산 민주당 최다선 중진이 되기까지, 그 긴 과정을 통해 김영춘은 "김영삼의 정치철학이 부산에서 다시 민주당계 정당으로 돌아오는" 것을 보여주는 상징적인 인물로 자리잡았다. 그의 당락 자체가 곧 부산의 정치지형, 나아가 한국의 정치지형을 변화시킬 파급력있는 사건이 될 것이다. 
 
 <!--#### 부산 연제구 (더민주로 보내?)-->
 
@@ -303,9 +312,11 @@
 
 <!--#### 경남 창원시 성산구-->
 
-#### 경남 창원시 마산회원구, 양산시 을
+#### 경남 거제시, 양산시 을
+민주당계 정당과 보수주류 정당이 모두 피튀기는 공성/수성전을 펼칠 경상남도에서, 가장 주의깊게 보아야 할 지역 2개가 있다. 거제시는 보수주류 정당(새누리당)의 2016년 최소 득표율차 당선지역, 양산시 을은 민주당계 정당(더불어민주당)의 2016년 최소 득표율차 당선지역이다. 더불어민주당은 노동자가 밀집한 거제에서 반드시 당선되고 싶어할 것이고, 미래통합당은 현역 서형수 의원이 불출마한 지금 양산 을을 탈환해야만 한다고 생각할 것이다. 
+2016년 총선에서는 두 지역구 모두 복수의 무소속 후보가 등장해서, 도합 10~20%의 득표율을 가져간 바 있다. 4년이 지난 지금 이들의 표심 향방이, 두 정당의 운명을 가를 것이다. 
 
-#### 경남 거제시
+
 
 
 
