20200312_02 수정 (정당과 역사)

--- a/02_정당과 역사.md
+++ b/02_정당과 역사.md
@@ -31,7 +31,7 @@
 여기에 보수주류 정당의 집권기에는, 행정부 차원에서 사상의 다양성을 인정하지 않는 정책(한국사 교과서 국정화, 
 
 
-### 더불어민주당 - 민주당게 주류정당
+### 더불어민주당 - 민주당계 주류정당
 ### 민생당 - 민주당계 전라권 제3정당
 ### 열린민주당 - 민주당계 비례정당
 
@@ -45,7 +45,6 @@
 
 #### 충남 공주시-부여군-청양군
 
-#### 광주 서구 을
 
 
 
@@ -116,7 +115,13 @@
 
 2020년 3월 현재, 국민의당은 중도-보수적인 유권자들의 비례대표 정당투표를 위한 정당으로 재편되는 것으로 보인다. 2020년 국민의당 창당에 참여했던 비례대표 국회의원 중 상당수(신용현, 김수민, 김삼화)가 보수주류 정당(미래통합당)으로 이적하여 지역구 선거에 참여하고 있으며, 국민의당 역시 지역구에 공천하지 않고 비례대표만 출마시키기로 결정하였다. 이렇게 되면, 미래통합당으로 합류한 중도-보수적 후보들은 지역구에서 개별적으로 선거운동을 하고, 이들이 당선된 이후 국민의당의 비례대표 의원들과 협력하는 방식으로 활돌할 가능성이 있다. 
 
+### 눈여겨볼 선거
 
+#### 광주 서구 을
+
+#### 광주 광산구 을
+
+#### 전남 영암군-무안군-신안군
 
 ## 사민주의 진보정당
 **“인간이 인간답게, 사회가 평등하게, 노동이 아름답게, 민중이 주인되게. ” 민주노동당 당가의 가사에서 느끼는 충격처럼, 사민주의 정당은 등장과 존재 자체만으로도 중앙정치의 작동방식을 근본적으로 뒤바꿨다.**
